/* Noun */ revised example of card cutting <cut#2999586>

--- a/en/c/cut.6843.wikitext
+++ b/en/c/cut.6843.wikitext
@@ -64,7 +64,7 @@ Only colloquial expressions here! For normal language terms, see [[circumcised]]
 # {{Cricket}} A [[batsman]]'s shot played with a [[swing]]ing motion of the bat, to hit the ball [[backward]] of [[point]].
 # {{Cricket}} [[Sideways]] [[movement]] of the ball through the [[air]] caused by a [[fast bowler]] [[impart]]ing [[spin]] to the ball.
 # The act or right of dividing a deck of playing cards.
-#:''Whose '''cut''' is it?''
+#: ''The player next to the dealer '''cut''' the deck by placing the bottom half on top.''
 # The manner or style a garment is fashioned in.
 #:''I like the '''cut''' of that suit.''
 # A [[slab]], especially of meat.
