--- a/en/c/creep.6841.wikitext
+++ b/en/c/creep.6841.wikitext
@@ -54,8 +54,8 @@
 ====Synonyms====
 *{{i-c|move slowly with the abdomen close to the ground}} [[crawl]]
 *{{i-c|grow across a surface rather than upwards}}
-*{{i-c|move slowly and quietly in a particular direction}} [[inch]]
-*{{i-c|make small gradual changes in a particular direction}} [[inch]]
+*{{i-c|move slowly and quietly in a particular direction}}
+*{{i-c|make small gradual changes in a particular direction}}
 
 ====Translations====
 {{trans-top|move slowly with the abdomen close to the ground}}
