--- a/en/c/creep.6841.wikitext
+++ b/en/c/creep.6841.wikitext
@@ -12,7 +12,7 @@
 ===Noun===
 {{en-noun}}
 
-# The movement of something that creeps.
+# The movement of something that creeps (like worms or snails)
 # A relatively small gradual change, variation or deviation (from a planned value) in a measure.
 # A slight displacement of an object: the slight movement of something
 # {{context|publishing}} In sewn books, the tendency of [[page]]s on the inside of a [[quire]] to stand out farther than those on the outside of it.
