/* Translations */ +hr <stomach#3017344>

--- a/en/s/stomach.8435.wikitext
+++ b/en/s/stomach.8435.wikitext
@@ -26,6 +26,7 @@
 *:Hebrew: [[אסטומכא]] (esṬūmkā, esṬūmko) {{m}}
 *[[Breton]]: [[stomog]] {{m}}
 *Chinese: [[胃]] (wèi)
+*Croatian: {{t|hr|želudac|m}}, {{t|hr|stomak|m}}
 *Czech: [[žaludek]] {{m}}
 *Danish: [[bug#Danish|bug]] {{c}}
 *Dutch: [[maag]] {{f}}
