--- a/en/b/butter.7388.wikitext
+++ b/en/b/butter.7388.wikitext
@@ -197,13 +197,14 @@ Old English ''[[butere]]'' < a West Germanic borrowing of Latin ''[[butyrum]]'' 
 *Ido: [[butro]]
 *Interlingua: [[butyro]]
 *Italian: [[burro#Italian|burro]] {{m}}
-{{trans-mid}}
 *Japanese: [[バター]] (batā)
+{{trans-mid}}
 *Kinyarwanda: [[amavuta]]
 *Korean: [[버터]] (beoteo)
 *Kurdish: {{KUchar|[[که‌ره‌]]}}
 *Latvian: [[sviests]] {{m}}
 *Lithuanian: [[sviestas]] {{m}}
+*Macedonian: [[путер]] {{g|Macedonian}}
 *Mongolian: {{RUchar|[[цөцгийн тос]]}} (tsötsgiin tos)
 *Polish: [[masło]] {{n}}
 *Portuguese: [[manteiga]] {{f}}
