--- a/en/g/Germany.2103.wikitext
+++ b/en/g/Germany.2103.wikitext
@@ -17,7 +17,7 @@
 
 ====Translations====
 {{trans-top|Germany}}
-*Afrikaans: [[Duitsland]]
+*[[Afrikaans]]: [[Duitsland]]
 *Arabic: {{ARchar|[[المانيا]]}} (Almánya) {{f}}
 *Armenian: [[Գերմանիա]] (Germania)
 *Bosnian: [[Njemačka]] {{f}}
@@ -46,13 +46,13 @@
 *Irish: [[An Ghearmáin]] {{f}}
 *Italian: [[Germania]] {{f}}
 *Japanese: [[ドイツ]], [[独逸]] (Dóitsu)
-*Khmer: {{KMchar|[[ឤលឺម៉ង់]]}} (āllīmang)
+*[[Khmer]]: {{KMchar|[[ឤលឺម៉ង់]]}} (āllīmang)
 *Korean: [[독일]] (dogil)
 *Latin: [[Germania]] {{f}}
 {{trans-mid}}
 *Latvian: [[Vācija]] {{f}}
 *Lithuanian: [[Vokietija]] {{f}}
-*Livonian: [[Saksāmō]]
+*[[Livonian]]: [[Saksāmō]]
 *[[Luxembourgish]]: [[Däitschland]] {{n}}
 *Malay: [[Jerman]]
 *Maldivian: [[Jarumanu Vilay]]
@@ -78,9 +78,9 @@
 *Turkish: [[Almanya]]
 *Ukrainian: [[Німеччина]] (niméččyna) {{f}}
 *Vietnamese: [[nước Đức]]
-*Võro: [[S'aksamaa]]
+*[[Võro]]: [[S'aksamaa]]
 *Welsh: [[Yr Almaen]] {{f}}
-*Xhosa: [[iJamani]] ''(noun 5)''
+*[[Xhosa]]: [[iJamani]] ''(noun 5)''
 *Yiddish: [[דײַטשלאַנד]] (Daytshland) {{n}}
 {{trans-bottom}}
 
