--- a/en/s/suck.8436.wikitext
+++ b/en/s/suck.8436.wikitext
@@ -28,14 +28,14 @@ Old English ''[[sūcan]]''
 *Arabic: {{ARchar|[[مص]]}}
 *Armenian: [[ծծել]] (tstsel)
 *Bulgarian: [[смуча]] (smuča)
-*Catalan: [[xulcar]]
-*Ewe: [[nyi]]
+*[[Catalan]]: [[xulcar]]
+*[[Ewe]]: [[nyi]]
 *Finnish: [[imeä]]
 *French: [[sucer]]
 *Hindi: [[चूसना]] (ćūsnā)
 *German: [[saugen]]
 *Korean: [[빨다]] (ppalda)
-*[[Kurdish]]: [[mêjîn]], [[mêtin]], {{KUchar|[[مژین]]}}
+*Kurdish: [[mêjîn]], [[mêtin]], {{KUchar|[[مژین]]}}
 *Italian: [[succhiare]], [[suggere]]
 {{trans-mid}}
 *Latin: [[fellare]]
