--- a/en/s/saffron.4771.wikitext
+++ b/en/s/saffron.4771.wikitext
@@ -113,6 +113,7 @@
 *Swedish: [[saffransfärgad]], [[saffransgul]]
 *Urdu: {{URchar|[[کیسری]]}} (kesarī), {{URchar|[[کیسریا]]}} (kesariyā)
 {{trans-bottom}}
+*Portuguese: [[açafrão]]
 
 ===Derived terms===
 *[[meadow saffron]]
