--- a/en/b/beautiful.7394.wikitext
+++ b/en/b/beautiful.7394.wikitext
@@ -14,7 +14,7 @@
 {{en-adj}}
 
 # possessing charm and attractive
-#:''Bobbi Hills is very beautiful!''
+#:''Brooke Butler is very beautiful!''
 # {{context|of the weather}} pleasant; clear.
 # well executed
 #:''The skater performed a beautiful [[axel]].''
