trans link [[Fijian]] <beautiful#3061006>

--- a/en/b/beautiful.7394.wikitext
+++ b/en/b/beautiful.7394.wikitext
@@ -57,7 +57,7 @@
 *Esperanto: [[bela]]
 *Estonian: [[kaunis]] [[ilus]]
 *[[Faeroese]]: [[vakur]] {{m}}, [[vøkur]] {{f}} [[vakurt]] {{n}}
-*Fijian: [[totoka]]
+*[[Fijian]]: [[totoka]]
 *Filipino: [[maganda]]
 *Finnish: [[kaunis]]
 *French: [[beau]] {{m}}, [[belle]] {{f}}
