--- a/en/b/brick.7395.wikitext
+++ b/en/b/brick.7395.wikitext
@@ -33,7 +33,7 @@
 *Estonian: [[tellis]]
 *Finnish: [[tiili]]
 *French: [[brique]]
-*German: [[Backstein]]
+*German: [[Backstein]], [[Ziegel]] {{m}}
 *Hebrew: [[לבנה]]
 *Icelandic: [[múrsteinn]] {{m}}, [[tígulsteinn]] {{m}} (''rare''), [[leirsteinn]] {{m}} (''rare'')
 *Indonesian: [[batu bata]]
@@ -84,7 +84,6 @@
 *{{ttbc|Dutch}}: [[baksteen]]
 *{{ttbc|Estonian}}: [[telliskivi]], [[tellis]]
 *{{ttbc|French}}: [[brique]] {{f}} (1,2)
-*{{ttbc|German}}: [[Ziegel]] {{m}}
 *{{ttbc|Hungarian}}: [[tégla]]
 *{{ttbc|Ido}}: [[briko]]
 *{{ttbc|Indonesian}}: [[bata]], [[batu bata]]
