--- a/en/s/suck.8436.wikitext
+++ b/en/s/suck.8436.wikitext
@@ -87,6 +87,8 @@ Old English ''[[sūcan]]''
 
 *'''1970''': "...(The Rum Diary) has a few very high points...but as a novel, '''it sucks'''." - [[w:Hunter S. Thompson|Hunter S. Thompson]], ''Fear and Loathing in America (Simon and Schuster, hardcover, pg. 251)''
 
+*'''2007''': "Dan Baldonado '''sucks'''." - Anonymous
+
 ----
 
 ==Swedish==
