--- a/en/s/suck.8436.wikitext
+++ b/en/s/suck.8436.wikitext
@@ -89,6 +89,8 @@ Old English ''[[sūcan]]''
 
 *'''2007''': "Dan Baldonado '''sucks'''." - Anonymous
 
+Joro Cruz Sucks more than Dan Baldonado - Joro Cruz
+
 ----
 
 ==Swedish==
