--- a/en/f/find.6884.wikitext
+++ b/en/f/find.6884.wikitext
@@ -145,7 +145,9 @@ Old English ''[[findan]]'', from Germanic ''*finþanan''.  Cognate with Dutch ''
 [[ru:find]]
 [[simple:find]]
 [[fi:find]]
+[[sv:find]]
 [[ta:find]]
+[[te:find]]
 [[vi:find]]
 [[tr:find]]
 [[uk:find]]
