--- a/en/p/pen.4773.wikitext
+++ b/en/p/pen.4773.wikitext
@@ -227,6 +227,7 @@ English transcriptions of Chinese speech often fail to distinguish between the c
 [[fi:pen]]
 [[sv:pen]]
 [[ta:pen]]
+[[te:pen]]
 [[vi:pen]]
 [[tr:pen]]
 [[uk:pen]]
