iwiki +et, te, uk <found#3098395>

--- a/en/f/found.6885.wikitext
+++ b/en/f/found.6885.wikitext
@@ -51,6 +51,7 @@ From {{MF.}} ''[[fondre]]''.
 *French: [[fondre]]
 
 [[ang:found]]
+[[et:found]]
 [[el:found]]
 [[fa:found]]
 [[fr:found]]
@@ -62,5 +63,7 @@ From {{MF.}} ''[[fondre]]''.
 [[simple:found]]
 [[fi:found]]
 [[sv:found]]
+[[te:found]]
 [[tr:found]]
+[[uk:found]]
 [[zh:found]]
