--- a/en/c/creep.6841.wikitext
+++ b/en/c/creep.6841.wikitext
@@ -52,7 +52,7 @@
 #: ''Prices have been '''creeping''' up all year.''
 
 ===Slang===
-#  Creep out {{slang}} to make someone feel nervous and uncomfortable
+#  Creep out {{slang}} to cause other people to feel like you're strange, making them uncomfortable because of it
 #: That janitor who's always talking about blood creeps me out.
 
 ===Synonyms===
