--- a/en/c/creep.6841.wikitext
+++ b/en/c/creep.6841.wikitext
@@ -52,8 +52,8 @@
 #: ''Prices have been '''creeping''' up all year.''
 
 ===Slang===
-#  Creep out {{slang}} to cause other people to feel like you're strange, making them uncomfortable because of it
-#: That janitor who's always talking about blood creeps me out.
+#  Creep out {{slang}} to cause other people to feel as if you're strange, making them uncomfortable because of it; weird out.
+#:'' That janitor who's always talking about blood creeps me out.''
 
 ===Synonyms===
 *{{i-c|move slowly with the abdomen close to the ground}} [[crawl]]
