--- a/en/c/creep.6841.wikitext
+++ b/en/c/creep.6841.wikitext
@@ -51,8 +51,6 @@
 # {{transitive}} To make small gradual changes, usually in a particular direction.
 #: ''Prices have been '''creeping''' up all year.''
 
-
-
 ===Synonyms===
 *{{i-c|move slowly with the abdomen close to the ground}} [[crawl]]
 *{{i-c|grow across a surface rather than upwards}}
@@ -60,6 +58,7 @@
 *{{i-c|make small gradual changes}}
 
 ====Translations====
+{{rfc-level|Translations at L4+ not in L3 POS section (AutoFormat would have corrected level of Synonyms)}}
 {{trans-top|move slowly with the abdomen close to the ground}}
 *[[Catalan]]: [[arrossegar-se]]
 *Czech: plazit se
