lefthand -> left-hand <port#3112366>

--- a/en/p/port.1843.wikitext
+++ b/en/p/port.1843.wikitext
@@ -16,7 +16,7 @@
 
 # A place on the coast at which ships can shelter, or dock to load and unload cargo or passengers.
 # A town or city containing such a place.
-# {{nautical}} ''(uncountable)'' The lefthand side of a [[vessel]] when one is facing the front.
+# {{nautical}} ''(uncountable)'' The left-hand side of a [[vessel]] when one is facing the front.
 
 =====Synonyms=====
 *(''place where ships dock''): [[harbour]], [[haven]]
@@ -92,7 +92,7 @@
 ====Adjective====
 {{en-adj-notcomp}}
 
-# {{nautical}} Of or relating to port, the lefthand side of a vessel.
+# {{nautical}} Of or relating to port, the left-hand side of a vessel.
 #:''on the port side''
 
 =====Synonyms=====
@@ -102,7 +102,7 @@
 *[[starboard]]
 
 =====Translations=====
-{{trans-top|of or relating to port, the lefthand side of a vessel}}
+{{trans-top|of or relating to port, the left-hand side of a vessel}}
 *Dutch: [[bakboord-]]
 *French: du [[bâbord]]
 *Greek: [[αριστερό]] (aristeró) {{n}}
