--- a/en/i/icon.6837.wikitext
+++ b/en/i/icon.6837.wikitext
@@ -113,6 +113,7 @@ From {{L.}} '''[[#Latin|icon]]''' < {{AGr.}} '''{{polytonic|[[εἰκών]]}}'''
 [[ru:icon]]
 [[fi:icon]]
 [[ta:icon]]
+[[te:icon]]
 [[vi:icon]]
 [[tr:icon]]
 [[zh:icon]]
