--- a/en/星/星.16967.wikitext
+++ b/en/星/星.16967.wikitext
@@ -1,34 +1,40 @@
 {{see|曐|皨}}
-
 ==Translingual==
+
 ===Etymology===
 [[曐]] is the original chatacter. The upper part [[晶]], it is shaped from twinkling stars. [[生]] is the sound and mean fresh sprouts. Or, 晶 is the sound.
+
 ===Han character===
 {{Han char|rn=72|rad=日|as=05|sn=9|four=6010<sub>4</sub>|canj=日竹手一 (AHQM)|ids=⿱[[日]][[生]]}}
+
 # a [[star]], [[planet]]
 # any point of light
 # shorthand for [[Singapore]] (星加坡)
+
 ====References====
 {{Han ref|kx=0492.210|dkj=13837|dj=0855.220|hdz=21500.120|uh=661F|ud=26143|bh=AC50|bd=44112}}
 
 ----
 
 ==Cantonese==
+
 ===Hanzi===
 {{yue-hanzi|jyut=|y=sing1}}
+
 # {{defn|Cantonese}}
 
 ----
+
 ==Japanese==
+
 ===Noun===
-[[Category:1000 Japanese basic words|ほし]]
 {{ja-noun|k|hira=ほし|rom=hoshi}}
 
 # a [[stellar]] object; [[star]]; [[planet]]; satellite; [[comet]]
-[[Category:ja:Astronomy|ほし]]
 
 ===Proper noun===
 {{ja-pos|k|proper|hira=ほし|rom=Hoshi}}
+
 # Hoshi (a surname)
 
 ===See also===
@@ -67,17 +73,25 @@
 *[[星人]]
 {{bottom}}
 
+[[Category:1000 Japanese basic words|ほし]]
+[[Category:ja:Astronomy|ほし]]
+
 ----
 
 ==Korean==
+
 ===Hanja===
 {{ko-hanja|hangeul=[[성]]|eumhun=|rv=seong|mr=sŏng|y=seng}}
+
 # {{defn|Korean}}
 
 ----
+
 ==Mandarin==
+
 ===Hanzi===
 {{cmn-hanzi|pin=[[xīng]] ([[xing1]])|wg=hsing<sup>1</sup>}}
+
 # {{defn|Mandarin}}
 
 ====Compounds====
@@ -121,9 +135,11 @@
 *[[海星]]
 {{bottom}}
 
+----
+
 ==Vietnamese==
 
-===Han Character===
+===Han character===
 {{vi-hantu|[[tinh]]}}
 
 # {{defn|Vietnamese}}
