iwiki +te <zenith#3137321>

--- a/en/z/zenith.7223.wikitext
+++ b/en/z/zenith.7223.wikitext
@@ -57,5 +57,6 @@ From {{Arab.}} ''as-samt'' "direction of heads", via misspelled Italian ''zenit'
 [[ja:zenith]]
 [[pl:zenith]]
 [[ru:zenith]]
+[[te:zenith]]
 [[vi:zenith]]
 [[zh:zenith]]
