/* See also */ <come#3151947>

--- a/en/c/come.6838.wikitext
+++ b/en/c/come.6838.wikitext
@@ -129,6 +129,7 @@ This spelling (for this meaning) is extremely rare, in comparison to the homopho
 {{trans-bottom}}
 
 ===See also===
+*[[cam'st]]
 *[[kingdom come]]
 
 [[Category:English verbs which are their own past participle]]
