--- a/en/星/星.16967.wikitext
+++ b/en/星/星.16967.wikitext
@@ -2,7 +2,7 @@
 ==Translingual==
 
 ===Etymology===
-[[曐]] is the original chatacter. The upper part [[晶]], it is shaped from twinkling stars. [[生]] is the sound and mean fresh sprouts. Or, 晶 is the sound.
+[[曐]] is the original character. The upper part [[晶]], it is shaped from twinkling stars. [[生]] is the sound and mean fresh sprouts. Or, 晶 is the sound.
 
 ===Han character===
 {{Han char|rn=72|rad=日|as=05|sn=9|four=6010<sub>4</sub>|canj=日竹手一 (AHQM)|ids=⿱[[日]][[生]]}}
