--- a/en/s/spelled.7212.wikitext
+++ b/en/s/spelled.7212.wikitext
@@ -9,7 +9,7 @@
 ===Verb===
 '''spelled'''
 
-# past tense of to [[spell]]
+# {{past of|[[spell]]}}
 
 ====Translations====
 *Dutch: [[spelde]], [[spelden]]
