--- a/en/c/come.6838.wikitext
+++ b/en/c/come.6838.wikitext
@@ -4,7 +4,7 @@
 {{rank|old|came|men|107|come|without|make|def}}
 
 ===Etymology===
-{{OE.}} [[cuman]]. Cognate include Latin ''[[commeo]]'' (to come and go, to go up and down)
+{{OE.}} [[cuman]]. Cognate include Latin ''[[comme]]'' (to come and go, to go up and down)
 
 ===Pronunciation===
 *{{AHD|/kŭm/}}
