trans link [[Scottish Gaelic]] <thunder#3168711>

--- a/en/t/thunder.7222.wikitext
+++ b/en/t/thunder.7222.wikitext
@@ -46,10 +46,10 @@
 *Polish: [[grzmot]] {{m}}
 *Portuguese: [[trovão]] {{m}}
 *Russian: [[гром]] (grom) {{m}}
-*Scottish Gaelic: [[tàirneanach]] {{f}}
+*[[Scottish Gaelic]]: [[tàirneanach]] {{f}}
 *Serbian: [[grom]], [[grmljavina]]
 *Spanish: [[trueno]] {{m}}
-*Swahili:  [[radi]] ''(nc 9/10)''
+*Swahili: [[radi]] ''(nc 9/10)''
 *Swedish: [[åska]] {{c}}, (åsk)[[smäll]] {{c}}
 *Thai: {{THchar|[[สายฟ้า]]}} (săaifáa)
 {{trans-bottom}}
@@ -60,7 +60,7 @@
 {{trans-mid}}
 *Polish: [[grzmot]] {{m}}
 *Russian: [[гром]] (grom) {{m}}, [[грохот]] (gróxot) {{m}}
-*Scottish Gaelic: [[tàirneanach]] {{f}}
+*[[Scottish Gaelic]]: [[tàirneanach]] {{f}}
 *Serbian: [[grmnjevit]], [[grmnjevito]], [[zagrmeti]]
 *Swedish: [[åskmuller]] {{n}}, [[muller]] {{n}}, [[åskdån]] {{n}}, [[dån]] {{n}}
 {{trans-bottom}}
@@ -71,7 +71,7 @@
 {{trans-mid}}
 *Polish: [[grzmot]] {{m}}
 *Russian: [[рокот]] (rókot) {{m}}
-*Scottish Gaelic: [[tàirneanach]] {{f}}
+*[[Scottish Gaelic]]: [[tàirneanach]] {{f}}
 *Swedish: [[mullrande]] {{n}}, [[dån]] {{n}}
 {{trans-bottom}}
 
@@ -102,9 +102,9 @@
 ===Verb===
 {{en-verb}}
 
-#{{context|intransitive}} To make a [[noise]] like thunder.
-#{{context|intransitive}} To talk with a [[loud]], [[threatening]] voice.
-#{{context|transitive}} To say (something) with a loud, threatening voice.
+# {{context|intransitive}} To make a [[noise]] like thunder.
+# {{context|intransitive}} To talk with a [[loud]], [[threatening]] voice.
+# {{context|transitive}} To say (something) with a loud, threatening voice.
 
 ====Translations====
 {{trans-top|to make a noise like thunder}}
