--- a/en/愬/愬.15679.wikitext
+++ b/en/愬/愬.15679.wikitext
@@ -31,5 +31,9 @@
 ===Hanzi===
 {{cmn-hanzi|pin=[[sù]] ([[su4]])|wg=su<sup>4</sup>}}
 # {{defn|Mandarin}}
+----
+==Vietnamese==
+===Han character===
+'''愬''' ([[tố]])
 
 [[fr:愬]]
