--- a/en/f/France.2105.wikitext
+++ b/en/f/France.2105.wikitext
@@ -128,6 +128,9 @@ From {{F.}} ''[[#French|France]]''.
 
 ==French==
 
+===Pronunciation===
+*{{audio|Fr-France.ogg|audio}}
+
 ===Etymology===
 From the [[Francs]], a people.
 
