--- a/en/c/cost.6840.wikitext
+++ b/en/c/cost.6840.wikitext
@@ -3,19 +3,19 @@
 {{rank|week|stone|tree|781|cost|value|cast|speaking}}
 {{wikipedia}}
 ===Pronunciation===
-*(''[[Received Pronunciation|UK]]'') {{IPA|/kɒst/}}
-*(''[[General American|US]]'') {{IPA|/kɔst/}}
+*{{a|RP}} {{IPA|/kɒst/}}
+*{{a|US}} {{IPA|/kɔst/}}
 *{{audio|en-us-cost.ogg|Audio (US)}}
 *:Rhymes: [[Rhymes:English:-ɒst|-ɒst]]
 
 ===Noun===
 {{en-noun}}
 
-# Amount of money, time, etc. that is required or used.
-# A negative consequence or loss that occurs or is required to occur.
+# Amount of [[money]], time, etc. that is [[required]] or used.
+# A negative [[consequence]] or loss that occurs or is required to occur.
 
 ====Translations====
-{{trans-top|amount of money, time, etc. (1)}}
+{{trans-top|amount of money, time, etc.}}
 *Czech: [[náklad]] {{m}}
 *Finnish: [[hinta]], [[kustannus]]
 *German: [[Kosten]] {{f}} ''plural''
@@ -23,14 +23,14 @@
 *Italian: [[costo]] {{m}}, [[spesa]] {{f}}
 *Kurdish: {{KUchar|[[به‌ها]]}}, {{KUchar|[[نرخ]]}}
 *Portuguese: [[custo]] {{m}}
-*Spanish: [[costo]] {{m}}
+*Spanish: {{t|es|costo|m}}
 {{trans-bottom}}
 
-{{trans-top|negative consequence or loss (2)}}
+{{trans-top|negative consequence or loss}}
 *Finnish: [[hinta]]
 {{trans-mid}}
 *German: [[Verlust]] {{m}}
-*Spanish: [[costo]] {{m}}
+*Spanish: {{t|es|costo|m}}
 {{trans-bottom}}
 
 =====Translations to be checked=====
@@ -52,14 +52,14 @@
 {{trans-top}}
 *Dutch: [[kosten]]
 *Finnish: [[maksaa]]
-*French: [[coûter]]
+*French: {{t|fr|coûter}}
 *German: [[kosten]]
 *Indonesian: [[habis|menghabiskan]] biaya
 *Italian: [[costare]]
 {{trans-mid}}
 *Greek: [[κοστίζω]] [ko̞ˈstizo̞] (means also "to cause damage or distress"), [[στοιχίζω]] [stiˈçizo̞] (means also "to inflict" and "to align"), [[τιμώμαι]] [tiˈmo̞me̞], [[κάνω]] [ˈkano̞] [colloquial (has a huge number of meanings, one of them is "to cost")]
 *Japanese: [[費やす]] ([[ついやす]], tsuiyasu)
-*Spanish: [[costar]] 
+*Spanish: {{t|es|costar}}
 {{trans-bottom}}
 
 [[Category:English irregular verbs]]
