--- a/en/b/branch.7390.wikitext
+++ b/en/b/branch.7390.wikitext
@@ -60,7 +60,7 @@ From {{OF.}} ''[[branche]]''.
 
 {{trans-top|office of an organization with several locations}}
 *Dutch: [[filiaal]]
-*Finnish: [[ala]]
+*Finnish: [[sivukonttori]]
 *German: [[Zweigstelle]] {{f}}, [[Filiale]] {{f}}
 *Hebrew: [[סניף]] (snyf) {{m}}
 *Portuguese: [[filial]] {{f}}
