--- a/en/n/New Zealand.2106.wikitext
+++ b/en/n/New Zealand.2106.wikitext
@@ -9,7 +9,7 @@
 From Dutch '''[[Nieuw-Zeeland]]''', "new Zeeland", after the Dutch settlement in [[Batavia]], which in turn had been named after the Dutch province of [[Zeeland]].
 
 ===Proper noun===
-'''New Zealand they are sheep shagers'''
+'''New Zealand'''
 
 # A country in [[Oceania]], to the east of [[Australia]]. Official name: New Zealand.  Abbreviation: '''[[NZ]]''' or [[Aotearoa]]
 # The islands of New Zealand, especially the North Island, South Island and nearby coastal islands.
@@ -72,7 +72,6 @@ From Dutch '''[[Nieuw-Zeeland]]''', "new Zeeland", after the Dutch settlement in
 *[[New Zealander]]
 
 *[[Enzedder]]
-sheep shagers
 
 ===See also===
 *[[Countries of the world]]
