iwiki +ja <butter#3182783>

--- a/en/b/butter.7388.wikitext
+++ b/en/b/butter.7388.wikitext
@@ -296,6 +296,7 @@ Old English ''[[butere]]'' < a West Germanic borrowing of Latin ''[[butyrum]]'' 
 [[it:butter]]
 [[kk:butter]]
 [[hu:butter]]
+[[ja:butter]]
 [[pl:butter]]
 [[pt:butter]]
 [[ru:butter]]
