/* Translations to be checked */ formatting <cost#3191685>

--- a/en/c/cost.6840.wikitext
+++ b/en/c/cost.6840.wikitext
@@ -33,15 +33,14 @@
 *Spanish: {{t|es|costo|m}}
 {{trans-bottom}}
 
-=====Translations to be checked=====
-{{checktrans}}
-
+{{ttbc-top}}
 *{{ttbc|Chinese}}: [[费]] (fèi)
 *{{ttbc|German}}: [[Kosten]] ''f pl''
 *{{ttbc|Greek}}: [[κόστος]] [ˈko̞sto̞s] ''n'', [[έξοδο]] [ˈe̞k͡so̞ˌðo̞] ''n'', [[δαπάνη]] [ðaˈpani] ''f'', [[τίμημα]] [ˈtimiˌma] ''n'', [[αντίτιμο]] [aˈ(n)ditiˌmo̞] ''n''
 *{{ttbc|Indonesian}}: [[biaya]], [[ongkos]]
 *{{ttbc|Japanese}}: [[費用]] ([[ひよう]], hiyō)
 *{{ttbc|Portuguese}}: [[Custo]]
+{{trans-bottom}}
 
 ===Verb===
 {{en-verb|costs|costing|cost}}
