--- a/en/c/cost.6840.wikitext
+++ b/en/c/cost.6840.wikitext
@@ -2,6 +2,7 @@
 
 {{rank|week|stone|tree|781|cost|value|cast|speaking}}
 {{wikipedia}}
+
 ===Pronunciation===
 *{{a|RP}} {{IPA|/kɒst/}}
 *{{a|US}} {{IPA|/kɔst/}}
@@ -22,7 +23,7 @@
 {{trans-mid}}
 *Italian: [[costo]] {{m}}, [[spesa]] {{f}}
 *Kurdish: {{KUchar|[[به‌ها]]}}, {{KUchar|[[نرخ]]}}
-*Novial: [[kosto]]
+*[[Novial]]: [[kosto]]
 *Portuguese: [[custo]] {{m}}
 *Spanish: {{t|es|costo|m}}
 {{trans-bottom}}
@@ -31,7 +32,7 @@
 *Finnish: [[hinta]]
 {{trans-mid}}
 *German: [[Verlust]] {{m}}
-*Novial: [[kosto]]
+*[[Novial]]: [[kosto]]
 *Spanish: {{t|es|costo|m}}
 {{trans-bottom}}
 
@@ -63,11 +64,11 @@
 *Spanish: {{t|es|costar}}
 {{trans-bottom}}
 
-[[Category:English irregular verbs]]
-[[Category:English simple past forms]]
-[[Category:English irregular simple past forms]]
-[[Category:English past participles]]
 [[Category:English irregular past participles]]
+[[Category:English irregular simple past forms]]
+[[Category:English irregular verbs]]
+[[Category:English past participles]]
+[[Category:English simple past forms]]
 
 [[el:cost]]
 [[fa:cost]]
