--- a/en/i/i_e_.7209.wikitext
+++ b/en/i/i_e_.7209.wikitext
@@ -16,8 +16,7 @@ From the Latin [[id est]], meaning “that is”.
 
 ====Usage notes====
 *Use '''i.e.''' to explain or clarify a statement by either (exhaustively) listing options or by rephrasing the previous statement.
-*Always follow '''i.e.''' by a [[comma]] when used in its function as a clarifier.
-*When used in a sentence, '''i.e.''' should be used parenthetically ('''i.e.''', embraced in parentheses).
+*American English demands a comma after '''i.e.'''; in British English comma does not follow '''i.e.''' [http://dictionary.reference.com/help/faq/language/g58.html]
 *Opinion is mixed about whether the abbreviation should be italicized, or whether there should be a separating non-breaking space as in '''i.&nbsp;e.'''.
 *'''ie:''' is often found in current usage, and is perhaps now considered acceptable.
 
