Reverted edits by [[Special:Contributions/58.69.175.186|58.69.175.186]] ([[User_talk:58.69.175.186|Talk]]); changed back to last version by [[User:Moilleadóir|Moilleadóir]] <Israel#3208143>

--- a/en/i/Israel.2109.wikitext
+++ b/en/i/Israel.2109.wikitext
@@ -23,10 +23,9 @@ Originally from {{He.}} ''[[ישראל]]'', the name "Israel" is rooted in the [
 ====Derived terms====
 *[[Israeli]]
 *[[Israelite]]
-*english:[[israeli]]
-good evening ladies & gentlemen <nowiki>{{}}</nowiki>
+
 ====Translations====
-{{trans-top|the nation}} i am aljun rosales<nowiki>{{}}</nowiki>
+{{trans-top|the nation}}
 *Albanian: [[Izraeli]]
 *Arabic: {{ARchar|[[إسرائيل]]}} (’isra’íl)
 *Armenian: [[Իսրայել]] (Israyel)
