--- a/en/s/skirt.7203.wikitext
+++ b/en/s/skirt.7203.wikitext
@@ -53,7 +53,7 @@ From Old Norse ''[[skyrta]]'', from Germanic ''*skurtijon''.  Compare ''[[shirt]
 *:Roman: [[suknja#Serbian|suknja]] {{f}}
 *Slovak: [[sukňa]] {{f}}
 *Slovene: [[krilo]] {{n}}
-*Spanish: [[falda]] {{f}}, [[enaguas]] {{fpl}} {{italbrac|Costa Rica|Nicaragua}}, [[pollera]] {{f}} {{italbrac|Argentina|Chile|Paraguay|Uruguay}}, [[saya]] {{f}} {{italbrac|Cuba}}
+*Spanish: [[falda]] {{f}}, [[enaguas]] {{f|p}} {{italbrac|Costa Rica|Nicaragua}}, [[pollera]] {{f}} {{italbrac|Argentina|Chile|Paraguay|Uruguay}}, [[saya]] {{f}} {{italbrac|Cuba}}
 *Swedish: [[kjol]] {{c}}
 *[[Telugu]]: [[పరికిణి]] (parikiNi)
 {{trans-bottom}}
@@ -72,7 +72,7 @@ From Old Norse ''[[skyrta]]'', from Germanic ''*skurtijon''.  Compare ''[[shirt]
 *Old English: [[læppa]] {{m}}
 *Portuguese: [[saia]] {{f}}
 *Russian: [[юбка]] (júbka) {{f}}
-*Spanish: [[falda]] {{f}}, [[enaguas]] {{fpl}} {{italbrac|Costa Rica|Nicaragua}}, [[pollera]] {{f}} {{italbrac|Argentina|Chile|Paraguay|Uruguay}}, [[saya]] {{f}} {{italbrac|Cuba}}
+*Spanish: [[falda]] {{f}}, [[enaguas]] {{f|p}} {{italbrac|Costa Rica|Nicaragua}}, [[pollera]] {{f}} {{italbrac|Argentina|Chile|Paraguay|Uruguay}}, [[saya]] {{f}} {{italbrac|Cuba}}
 *Swedish: [[kjol]] {{c}}
 {{trans-bottom}}
 
