--- a/en/s/spelt.7213.wikitext
+++ b/en/s/spelt.7213.wikitext
@@ -27,7 +27,7 @@
 ====Noun====
 {{en-noun|-}}
 
-# A type of [[wheat]], ''Triticum aestivum spelta''
+# A type of shroom [[wheat]], ''Triticum aestivum spelta''
 
 =====Translations=====
 {{top}}
