/* Translations */ Romansch <bridge#3214464>

--- a/en/b/bridge.7389.wikitext
+++ b/en/b/bridge.7389.wikitext
@@ -61,9 +61,9 @@
 *Irish: [[droichead]]
 *Italian: [[ponte#Italian|ponte]] {{m}}
 *Japanese: [[橋]] ([[はし]], hashi)
-{{trans-mid}}
 *Korean: [[다리]] (dari), ...[[교]] (...gyo, used as suffix)
 *[[Kurdish]]:
+{{trans-mid}}
 *:Kurmancî: [[pir]]
 *:Soranî: {{KUchar|[[پرد]]}}, (pird)
 *Latin: [[pons]] {{m}}
@@ -80,6 +80,7 @@
 *Serbian:
 *:Cyrillic: [[мост#Serbian|мост]] {{m}}, [[ћуприја#Serbian|ћуприја]] {{f}} ''(arch./poetic)''
 *:Roman: [[most#Serbian|most]] {{m}}, [[ćuprija#Serbian|ćuprija]] {{f}} ''(arch./poetic)''
+*Romansch: [[punt]] {{m}}
 *Scottish Gaelic: [[drochaid]] {{f}}
 *Slovak: [[most#Slovak|most]] {{m}}
 *Slovene: [[most#Slovene|most]] {{m}}
