--- a/en/b/butter.7388.wikitext
+++ b/en/b/butter.7388.wikitext
@@ -289,6 +289,7 @@ Old English ''[[butere]]'' < a West Germanic borrowing of Latin ''[[butyrum]]'' 
 [[de:butter]]
 [[et:butter]]
 [[el:butter]]
+[[es:butter]]
 [[fr:butter]]
 [[ko:butter]]
 [[hy:butter]]
