--- a/en/v/vomit.8434.wikitext
+++ b/en/v/vomit.8434.wikitext
@@ -16,29 +16,29 @@ See [[WikiSaurus:vomit]]
 
 ====Translations====
 {{top}}
-*Armenian: [[հետ տալ]], [[փսխել]]
+*Armenian: {{t|hy|հետ տալ}}, {{t|hy|փսխել}}
 *Czech: [[zvracet]]
-*Dutch: [[overgeven]], [[braken]], ''(colloquial)'' [[kotsen]]
-*Esperanto: [[vomi]]
+*Dutch: {{t|nl|overgeven}}, {{t|nl|braken]], {{t|nl|kotsen|colloquial}}
+*Esperanto: {{t|eo|vomi}}
 *Estonian: [[oksendama]]
-*Finnish: [[oksentaa]]
-*French: [[vomir]]
+*Finnish: {{t|fi|oksentaa}}
+*French: {{t|fr|vomir}}
 *German: [[sich]] [[übergeben]], [[erbrechen]]
-*Greek: εμετός
-*Hebrew: [[להקיא]]
-*Italian: [[vomitare]], [[rimettere]]
+*Greek: {{t|el|εμετός}}
+*Hebrew: {{t|he|להקיא}}
+*Italian: {{t|it|vomitare}}, {{t|it|rimettere}}
 *Japanese: [[吐く]] ([[はく]], haku), [[嘔吐する]] ([[おうとする]], ōtosuru)
 {{mid}}
 *Korean: [[게우다]] (geuda)<!--, [[토하다]] ([[吐]]-, to-hada)-->
 *Maltese: [[irrimetta]] {{m}}, [[irrimettat]] {{f}}, [[qala']] {{m}}, [[qalgħat]] {{f}}
 *Norwegian: [[kaste opp]]
-*Polish: [[wymiotować]], [[rzygać]]
-*Portuguese: [[vomitar]]
-*Romanian: a [[vomita]]
-*Russian: [[блевать]], [[рвать]]
-*Serbian: [[zbljuvati]], [[povratiti]], [[bljuvati]], [[povraćati]]
-*Spanish: [[vomitar]], [[devolver]]
-*Swedish: [[kräkas]], [[spy]]
+*Polish: {{t|pl|wymiotować}}, {{t|pl|rzygać}}
+*Portuguese: {{t|pt|vomitar}}
+*Romanian: {{t|ro|vomita}}, {{t|ro|borî}}
+*Russian: {{t|ru|блевать}}, {{t|ru|рвать}}
+*Serbian: {{t|sr|zbljuvati}}, {{t|sr|povratiti}}, {{t|sr|bljuvati}}, {{t|sr|povraćati}}
+*Spanish: {{t|es|vomitar}}, {{t|es|devolver}}
+*Swedish: {{t|sv|kräkas}}, {{t|sv|spy}}
 {{bottom}}
 
 ===Noun===
