trans link [[Lower Sorbian]], trans link [[Upper Sorbian]] <stomach#3221209>

--- a/en/s/stomach.8435.wikitext
+++ b/en/s/stomach.8435.wikitext
@@ -1,5 +1,6 @@
 ==English==
 {{wikipedia}}
+
 ===Pronunciation===
 *{{audio|en-us-stomach.ogg|Audio (US)}}
 
@@ -46,19 +47,19 @@
 *Kazakh: [[асқазан]] (asqazan)
 *Korean: [[위]] (wi)
 *Latin: [[stomachus]] {{m}}
-*Lower Sorbian: [[žołdk]] {{m}}
+*[[Lower Sorbian]]: [[žołdk]] {{m}}
 *Maltese: [[stonku]] {{m}}
 *Old English: [[maga#Old English|maga]] {{m}}
 *Polish: {{t|pl|żołądek}} {{m}}
 *Portuguese: [[estômago]] {{m}}
 *Russian: [[желудок]] (želúdok) {{m}}
 *Spanish: [[estómago]] {{m}}
-*Swahili:  [[tumbo]]  ''(noun 5/6)''
+*Swahili: [[tumbo]]  ''(noun 5/6)''
 *Swedish: [[mage]] {{c}}
 *[[Tagalog]]: [[tiyan]]
 *[[Telugu]]: [[పొట్ట]] (poTTa), [[కడుపు]] (kaDupu)
 *Turkish: [[mide]]
-*Upper Sorbian: [[žołdk]] {{m}}
+*[[Upper Sorbian]]: [[žołdk]] {{m}}
 {{trans-bottom}}
 
 {{trans-top|belly}}
