--- a/en/t/thunder.7222.wikitext
+++ b/en/t/thunder.7222.wikitext
@@ -121,6 +121,7 @@
 *Polish: [[grzmieć]], [[zagrzmieć]]
 *Portuguese: [[trovoar]], [[trovejar]]
 *Russian: [[греметь]] (gr'em'ét’), [[грохотать]] (groχotát’)
+*Slovene: [[grmeti]]
 *Swedish: [[dundra]], [[dåna]]
 *Thai: {{THchar|[[สายฟ้าฟาด]]}} (săaifáa fâat)
 {{trans-bottom}}
@@ -152,7 +153,6 @@
 *{{ttbc|Japanese}}: [[怒鳴る]] ([[どなる]], donaru)
 *{{ttbc|Latin}}: [[tonare]]
 *{{ttbc|Norwegian}}: [[tordne]]
-*{{ttbc|Slovene}}: [[grmeti]]
 *{{ttbc|Tupinambá}}: [[sunung]]
 *{{ttbc|Thai}}: {{THchar|[[ฟ้าผ่า]]}} (fáapàa)
 
