--- a/en/c/cost.6840.wikitext
+++ b/en/c/cost.6840.wikitext
@@ -4,10 +4,10 @@
 {{wikipedia}}
 
 ===Pronunciation===
-*{{a|RP}} {{IPA|/kɒst/}}
-*{{a|US}} {{IPA|/kɔst/}}
-*{{audio|en-us-cost.ogg|Audio (US)}}
-*:Rhymes: [[Rhymes:English:-ɒst|-ɒst]]
+* {{a|RP}} {{IPA|/kɒst/}}
+* {{a|US}} {{IPA|/kɔst/}}
+* {{audio|en-us-cost.ogg|Audio (US)}}
+*: Rhymes: [[Rhymes:English:-ɒst|-ɒst]]
 
 ===Noun===
 {{en-noun}}
@@ -17,32 +17,32 @@
 
 ====Translations====
 {{trans-top|amount of money, time, etc.}}
-*Czech: [[náklad]] {{m}}
-*Finnish: [[hinta]], [[kustannus]]
-*German: [[Kosten]] {{f}} ''plural''
-*Italian: [[costo]] {{m}}, [[spesa]] {{f}}
+* Czech: [[náklad]] {{m}}
+* Finnish: [[hinta]], [[kustannus]]
+* German: [[Kosten]] {{f|p}}
+* Italian: [[costo]] {{m}}, [[spesa]] {{f}}
 {{trans-mid}}
-*Japanese: [[費用]] ([[ひよう]], hiyō)
-*Kurdish: {{KUchar|[[به‌ها]]}}, {{KUchar|[[نرخ]]}}
-*[[Novial]]: [[kosto]]
-*Portuguese: [[custo]] {{m}}
-*Spanish: {{t|es|costo|m}}
+* Japanese: [[費用]] ([[ひよう]], hiyō)
+* Kurdish: {{KUchar|[[به‌ها]]}}, {{KUchar|[[نرخ]]}}
+* [[Novial]]: [[kosto]]
+* Portuguese: [[custo]] {{m}}
+* Spanish: {{t|es|costo|m}}
 {{trans-bottom}}
 
 {{trans-top|negative consequence or loss}}
-*Finnish: [[hinta]]
+* Finnish: [[hinta]]
 {{trans-mid}}
-*German: [[Verlust]] {{m}}
-*[[Novial]]: [[kosto]]
-*Spanish: {{t|es|costo|m}}
+* German: [[Verlust]] {{m}}
+* [[Novial]]: [[kosto]]
+* Spanish: {{t|es|costo|m}}
 {{trans-bottom}}
 
 {{ttbc-top}}
-*{{ttbc|Chinese}}: [[费]] (fèi)
-*{{ttbc|German}}: [[Kosten]] ''f pl''
-*{{ttbc|Greek}}: [[κόστος]] [ˈko̞sto̞s] ''n'', [[έξοδο]] [ˈe̞k͡so̞ˌðo̞] ''n'', [[δαπάνη]] [ðaˈpani] ''f'', [[τίμημα]] [ˈtimiˌma] ''n'', [[αντίτιμο]] [aˈ(n)ditiˌmo̞] ''n''
-*{{ttbc|Indonesian}}: [[biaya]], [[ongkos]]
-*{{ttbc|Portuguese}}: [[Custo]]
+* {{ttbc|Chinese}}: [[费]] (fèi)
+* {{ttbc|German}}: [[Kosten]] ''f pl''
+* {{ttbc|Greek}}: [[κόστος]] [ˈko̞sto̞s] ''n'', [[έξοδο]] [ˈe̞k͡so̞ˌðo̞] ''n'', [[δαπάνη]] [ðaˈpani] ''f'', [[τίμημα]] [ˈtimiˌma] ''n'', [[αντίτιμο]] [aˈ(n)ditiˌmo̞] ''n''
+* {{ttbc|Indonesian}}: [[biaya]], [[ongkos]]
+* {{ttbc|Portuguese}}: [[Custo]]
 {{trans-bottom}}
 
 ===Verb===
@@ -52,16 +52,16 @@
 
 ====Translations====
 {{trans-top}}
-*Dutch: [[kosten]]
-*Finnish: [[maksaa]]
-*French: {{t|fr|coûter}}
-*German: [[kosten]]
-*Indonesian: [[habis|menghabiskan]] biaya
-*Italian: [[costare]]
+* Dutch: [[kosten]]
+* Finnish: [[maksaa]]
+* French: {{t|fr|coûter}}
+* German: [[kosten]]
+* Indonesian: [[habis|menghabiskan]] biaya
+* Italian: [[costare]]
 {{trans-mid}}
-*Greek: [[κοστίζω]] [ko̞ˈstizo̞] (means also "to cause damage or distress"), [[στοιχίζω]] [stiˈçizo̞] (means also "to inflict" and "to align"), [[τιμώμαι]] [tiˈmo̞me̞], [[κάνω]] [ˈkano̞] [colloquial (has a huge number of meanings, one of them is "to cost")]
-*Japanese: [[費やす]] ([[ついやす]], tsuiyasu)
-*Spanish: {{t|es|costar}}
+* Greek: [[κοστίζω]] [ko̞ˈstizo̞] (means also "to cause damage or distress"), [[στοιχίζω]] [stiˈçizo̞] (means also "to inflict" and "to align"), [[τιμώμαι]] [tiˈmo̞me̞], [[κάνω]] [ˈkano̞] [colloquial (has a huge number of meanings, one of them is "to cost")]
+* Japanese: [[費やす]] ([[ついやす]], tsuiyasu)
+* Spanish: {{t|es|costar}}
 {{trans-bottom}}
 
 [[Category:English irregular past participles]]
