--- a/en/s/suck.8436.wikitext
+++ b/en/s/suck.8436.wikitext
@@ -28,7 +28,7 @@ Old English ''[[sūcan]]''
 *Arabic: {{ARchar|[[مص]]}}
 *Armenian: [[ծծել]] (tstsel)
 *Bulgarian: [[смуча]] (smuča)
-*[[Catalan]]: [[xulcar]]
+*[[Catalan]]: [[xuclar]]
 *[[Ewe]]: [[nyi]]
 *Finnish: [[imeä]]
 *French: [[sucer]]
