--- a/en/c/curve.7392.wikitext
+++ b/en/c/curve.7392.wikitext
@@ -84,11 +84,15 @@ From {{L.}} ''[[curvus]]''.
 * Swedish: [[kurva]] {{c}}
 {{trans-bottom}}
 
-'''algebraic curve'''
-''See'' '''[[algebraic curve]]'''
+{{trans-top|algebraic curve}}
+: ''See'' '''[[algebraic curve#Translations|algebraic curve]]'''
+{{trans-bot}}
 
-'''informal: usually in plural: attractive features of a woman'''
-'''informal: attractive shape of a woman's body'''
+{{trans-top|informal: usually in plural: attractive features of a woman}}
+<!--Note: put INFORMAL translations in this table, where these exist-->
+{{trans-bot}}
+
+{{trans-top|informal: attractive shape of a woman's body}}
 <!--Note: put INFORMAL translations in this table, where these exist-->
 {{top}}
 * [[Afrikaans]]: [[kurwe]]
@@ -99,7 +103,7 @@ From {{L.}} ''[[curvus]]''.
 * Swedish: [[kurva]] {{c}} (''usually plural''), [[figur]] {{c}} (''usually singular'')
 * Russian: [[изгибы]] {{p}}
 * [[Telugu]]: [[వంపులు]] (vampulu), [[వొంపులు]] (vompulu)
-{{bottom}}
+{{trans-bot}}
 
 ===Transitive verb===
 {{rfc-trverb|Transitive verb}}
