--- a/en/c/curve.7392.wikitext
+++ b/en/c/curve.7392.wikitext
@@ -94,12 +94,11 @@ From {{L.}} ''[[curvus]]''.
 
 {{trans-top|informal: attractive shape of a woman's body}}
 <!--Note: put INFORMAL translations in this table, where these exist-->
-{{top}}
 * [[Afrikaans]]: [[kurwe]]
 * [[Catalan]]: corbes, {{f}}, {{p}}
 * Dutch: [[rondingen]] ''m, pl'', [[figuur]] {{f}}
 * Finnish: [[kurvi]] (''usually in plural'' kurvit),
-{{mid}}
+{{trans-mid}}
 * Swedish: [[kurva]] {{c}} (''usually plural''), [[figur]] {{c}} (''usually singular'')
 * Russian: [[изгибы]] {{p}}
 * [[Telugu]]: [[వంపులు]] (vampulu), [[వొంపులు]] (vompulu)
