--- a/en/z/zenith.7223.wikitext
+++ b/en/z/zenith.7223.wikitext
@@ -27,16 +27,18 @@ From {{Arab.}} ''as-samt'' "direction of heads", via misspelled Italian ''zenit'
 *Czech: [[nadhlavník]] {{m}}
 *Finnish: [[zeniitti]]
 *French: [[zénith]] {{m}}
-{{trans-mid}}
 *German: [[Zenit]] {{m}}
+{{trans-mid}}
+*Japanese: {{t|ja|sc=Jpan|天頂|tr=tenchō}}
 *Polish: [[zenit]] {{m}}, [[apogeum]] {{n}}
 *Portuguese: [[zênite]] {{m}}
 {{trans-bottom}}
 
 {{trans-top|peak}}
 *Finnish: [[huippu]], [[huipennus]], [[huippukohta]], [[kohokohta]]
-{{trans-mid}}
 *French: [[zénith]] {{m}}
+{{trans-mid}}
+*Japanese: {{t|ja|sc=Jpan|頂点|tr=chōten}}, {{t|ja|sc=Jpan|絶頂|tr=zecchō}}
 {{trans-bottom}}
 
 =====Translations to be checked=====
@@ -47,7 +49,6 @@ From {{Arab.}} ''as-samt'' "direction of heads", via misspelled Italian ''zenit'
 *{{ttbc|German}}: [[Zenit]] {{m}}
 *{{ttbc|Interlingua}}: [[zenit]]
 *{{ttbc|Italian}}: [[zenit]] {{m}}
-*{{ttbc|Japanese}}: [[絶頂]], [[頂点]]; [[天頂]] (astronomy)
 *{{ttbc|Spanish}}: [[cenit]] {{m}}, [[zenit]] {{m}}, [[auge]] {{m}}
 
 [[fa:zenith]]
