IPA from [[Transwiki:Italian language/Swadesh list]] <come#3236393>

--- a/en/c/come.6838.wikitext
+++ b/en/c/come.6838.wikitext
@@ -141,6 +141,9 @@ This spelling (for this meaning) is extremely rare, in comparison to the homopho
 
 ==Italian==
 
+===Pronunciation===
+* {{IPA|[ˈkome]}}
+
 ===Etymology===
 Compare Spanish ''[[como]]'', ''[[cómo]]''.
 
