--- a/en/p/pen.4773.wikitext
+++ b/en/p/pen.4773.wikitext
@@ -2,10 +2,10 @@
 ==English==
 
 ===Pronunciation===
-*{{IPA|/pɛn/}}, {{SAMPA|/pEn/}}
-*{{audio|en-us-pen.ogg|Audio (US)}}
-*{{audio|en-us-inlandnorth-pen.ogg|Audio (US-Inland North)}}
-*Rhymes: [[Rhymes:English:-ɛn|-ɛn]]
+* {{IPA|/pɛn/}}, {{SAMPA|/pEn/}}
+* {{audio|en-us-pen.ogg|Audio (US)}}
+* {{audio|en-us-inlandnorth-pen.ogg|Audio (US-Inland North)}}
+* Rhymes: [[Rhymes:English:-ɛn|-ɛn]]
 
 ===Etymology 1===
 Origin uncertain, perhaps related to ''[[pin]]''.
@@ -22,24 +22,24 @@ Origin uncertain, perhaps related to ''[[pin]]''.
 
 =====Translations=====
 {{trans-top|enclosed area for animals}}
-*Dutch: [[omheining]] {{f}}, [[ren]] {{m}}
-*Finnish: [[karsina]]
-*French: [[enclos]] {{m}}
-*German: [[Pferch]] {{m}}
-*Italian: [[recinto]] {{m}}, [[chiuso]] {{m}}, {{italbrac|for sheep}} [[ovile]] {{m}}
+* Dutch: [[omheining]] {{f}}, [[ren]] {{m}}
+* Finnish: [[karsina]]
+* French: [[enclos]] {{m}}
+* German: [[Pferch]] {{m}}
+* Italian: [[recinto]] {{m}}, [[chiuso]] {{m}}, {{italbrac|for sheep}} [[ovile]] {{m}}
 {{trans-mid}}
-*Norwegian: [[innhegning]] {{mf}}, [[kve]] {{n}}
-*Russian: {{t|ru|загон|m}} (zagón)
-*Spanish: [[corral]] {{m}}
+* Norwegian: [[innhegning]] {{m|f}}, [[kve]] {{n}}
+* Russian: {{t|ru|загон|m}} (zagón)
+* Spanish: [[corral]] {{m}}
 {{trans-bottom}}
 
 {{trans-top|prison cell}}
-*Finnish: [[selli]], [[häkki]]
+* Finnish: [[selli]], [[häkki]]
 {{trans-mid}}
 {{trans-bottom}}
 
 {{trans-top|(baseball) bullpen}}
-:''see translations at'' '''[[bullpen]]'''.
+: ''see translations at'' '''[[bullpen]]'''.
 {{trans-bottom}}
 
 ====Verb====
@@ -49,11 +49,11 @@ Origin uncertain, perhaps related to ''[[pin]]''.
 
 =====Translations=====
 {{trans-top|to enclose}}
-*Finnish: [[karsinoida]], [[sulkea]] [[selli|selliin]]/[[karsina|karsinaan]]
-*German: [[einsperren]]
+* Finnish: [[karsinoida]], [[sulkea]] [[selli|selliin]]/[[karsina|karsinaan]]
+* German: [[einsperren]]
 {{trans-mid}}
-*Norwegian: [[innhegne]]
-*Russian: {{t-|ru|запирать}}, {{t-|ru|заключать}}
+* Norwegian: [[innhegne]]
+* Russian: {{t-|ru|запирать}}, {{t-|ru|заключать}}
 {{trans-bottom}}
 
 ===Etymology 2===
@@ -69,50 +69,50 @@ Origin uncertain, perhaps related to ''[[pin]]''.
 
 =====Related terms=====
 {{top2}}
-*[[penmanship]]
-*[[ball-point pen]]
-*[[cartridge pen]]
-*[[felt-tip pen]]
+* [[penmanship]]
+* [[ball-point pen]]
+* [[cartridge pen]]
+* [[felt-tip pen]]
 {{mid2}}
-*[[fountain pen]]
-*[[pen name]]
-*[[pen pal]]
-*[[poison pen]]
+* [[fountain pen]]
+* [[pen name]]
+* [[pen pal]]
+* [[poison pen]]
 {{bottom}}
 
 =====Translations=====
 {{trans-top|writing tool}}
-*Arabic: {{ARchar|[[قلم]]}} (qálam)
-*Croatian: [[pero]], [[kemijska olovka]]
-*Dutch: '''pen''' {{f}}
-*Finnish: [[kynä]], [[mustekynä]]
-*French: [[stylo]] {{m}}
-*German: [[Stift]] {{m}}
-*Hebrew: [[עט|עֵט]] (et) {{m}}
-*Hungarian: [[toll]]
-*Indonesian: '''pen''', [[pena]]
-*Icelandic: [[penni]] {{m}}
-*Irish: [[peann]] {{m}}
-*Italian: [[penna#Italian|penna]] {{f}}
-*Japanese: [[ペン]] (pen)
+* Arabic: {{ARchar|[[قلم]]}} (qálam)
+* Croatian: [[pero]], [[kemijska olovka]]
+* Dutch: '''pen''' {{f}}
+* Finnish: [[kynä]], [[mustekynä]]
+* French: [[stylo]] {{m}}
+* German: [[Stift]] {{m}}
+* Hebrew: [[עט|עֵט]] (et) {{m}}
+* Hungarian: [[toll]]
+* Indonesian: '''pen''', [[pena]]
+* Icelandic: [[penni]] {{m}}
+* Irish: [[peann]] {{m}}
+* Italian: [[penna#Italian|penna]] {{f}}
+* Japanese: [[ペン]] (pen)
 {{trans-mid}}
-*Korean: [[펜]] (pen)
-*Kurdish: {{KUchar|[[پێنووس]]}}
-*Norwegian: [[penn]] {{m}}
-*Persian: {{FAchar|[[قلم]]}} (ghalam)
-*Polish: [[pióro]] {{n}}, [[długopis]] {{m}}
-*Portuguese: [[caneta]] {{f}}
-*Russian: {{t+|ru|ручка|f}} (rúčka), {{t+|ru|перо|c}} (peró)
-*[[Scottish Gaelic]]: [[peann]] {{m}}
-*Spanish: [[pluma]] {{f}} , [[boli]]
-*Swedish: [[penna#Swedish|penna]]
-*[[Telugu]]: [[పెన్ను]], [[కలము]], [[కలం]] (pennu, kalamu, kalam)
-*Turkish: [[kalem]]
+* Korean: [[펜]] (pen)
+* Kurdish: {{KUchar|[[پێنووس]]}}
+* Norwegian: [[penn]] {{m}}
+* Persian: {{FAchar|[[قلم]]}} (ghalam)
+* Polish: [[pióro]] {{n}}, [[długopis]] {{m}}
+* Portuguese: [[caneta]] {{f}}
+* Russian: {{t+|ru|ручка|f}} (rúčka), {{t+|ru|перо|c}} (peró)
+* [[Scottish Gaelic]]: [[peann]] {{m}}
+* Spanish: [[pluma]] {{f}} , [[boli]]
+* Swedish: [[penna#Swedish|penna]]
+* [[Telugu]]: [[పెన్ను]], [[కలము]], [[కలం]] (pennu, kalamu, kalam)
+* Turkish: [[kalem]]
 {{trans-bottom}}
 
 {{trans-top|internal cartilage skeleton of a squid}}
 {{trans-mid}}
-*Korean: [[오징어]] [[뼈]] (ojingeo ppyeo)
+* Korean: [[오징어]] [[뼈]] (ojingeo ppyeo)
 {{trans-bottom}}
 
 ====Verb====
@@ -122,16 +122,16 @@ Origin uncertain, perhaps related to ''[[pin]]''.
 
 =====Translations=====
 {{trans-top|to write}}
-*German: [[niederschreiben]], [[verfassen]]
-*Dutch: [[opschrijven]], [[schrijven]], (colloquial: [[oppennen]], [[neerpennen]])
-*Finnish: [[kynäillä]]
-*French: [[écrire]]
-*Italian: [[scrivere]]
-*Kurdish: {{KUchar|[[نووسین]]}}
-*Norwegian: [[skrive]], [[føre i pennen]]
+* German: [[niederschreiben]], [[verfassen]]
+* Dutch: [[opschrijven]], [[schrijven]], (colloquial: [[oppennen]], [[neerpennen]])
+* Finnish: [[kynäillä]]
+* French: [[écrire]]
+* Italian: [[scrivere]]
+* Kurdish: {{KUchar|[[نووسین]]}}
+* Norwegian: [[skrive]], [[føre i pennen]]
 {{trans-mid}}
-*Portuguese: [[escrever]]
-*Russian: {{t+|ru|писать}} / {{t+|ru|написать}} (pisát’ / napisát’)
+* Portuguese: [[escrever]]
+* Russian: {{t+|ru|писать}} / {{t+|ru|написать}} (pisát’ / napisát’)
 {{trans-bottom}}
 
 ===Etymology 3===
@@ -144,13 +144,13 @@ Origin uncertain.
 
 =====Translations=====
 {{trans-top|female swan}}
-*Finnish: [[naaras]][[joutsen]]
-*French: [[cygne]] [[femelle]] {{m}}
-*German: [[weiblicher]] [[Schwan]] {{m}}, [[Schwänin]] {{f}} (archaic)
-*Norwegian: [[hunnsvane]] {{m}}
+* Finnish: [[naaras]][[joutsen]]
+* French: [[cygne]] [[femelle]] {{m}}
+* German: [[weiblicher]] [[Schwan]] {{m}}, [[Schwänin]] {{f}} (archaic)
+* Norwegian: [[hunnsvane]] {{m}}
 {{trans-mid}}
-*Russian: {{t|ru|лебёдка|f}} (lebjódka), {{t-|ru|лебёдушка|f}} (lebjódushka)
-*Serbian: [[labudica]]
+* Russian: {{t|ru|лебёдка|f}} (lebjódka), {{t-|ru|лебёдушка|f}} (lebjódushka)
+* Serbian: [[labudica]]
 {{trans-bottom}}
 
 ===Etymology 4===
@@ -160,6 +160,7 @@ Shortned form of ''[[penalty]]''
 {{en-noun}}
 
 # [[penalty]]
+
 [[Category:1000 English basic words]]
 
 ----
@@ -167,8 +168,8 @@ Shortned form of ''[[penalty]]''
 ==Dutch==
 
 ===Pronunciation===
-*[[w:IPA|IPA]]: /pεn/
-*[[w:SAMPA|SAMPA]]: /pEn/
+* [[w:IPA|IPA]]: /pεn/
+* [[w:SAMPA|SAMPA]]: /pEn/
 
 ===Noun===
 '''pen''' ''m''
