--- a/en/c/curve.7392.wikitext
+++ b/en/c/curve.7392.wikitext
@@ -95,7 +95,7 @@ From {{L.}} ''[[curvus]]''.
 {{trans-top|informal: attractive shape of a woman's body}}
 <!--Note: put INFORMAL translations in this table, where these exist-->
 * [[Afrikaans]]: [[kurwe]]
-* [[Catalan]]: corbes, {{f}}, {{p}}
+* [[Catalan]]: corbes, {{f|p}}
 * Dutch: [[rondingen]] ''m, pl'', [[figuur]] {{f}}
 * Finnish: [[kurvi]] (''usually in plural'' kurvit),
 {{trans-mid}}
