--- a/en/c/curtain.7391.wikitext
+++ b/en/c/curtain.7391.wikitext
@@ -21,6 +21,7 @@
 *Czech: [[závěs]] {{m}}
 *Finnish: [[verho]]
 *German: [[Vorhang]] {{m}}
+*Hebrew: [[וילון]] (vilon) {{m}}
 *Japanese [[カーテン]] (kāten)
 {{trans-mid}}
 *Kurdish: {{KUchar|[[په‌رده‌]]}}
