--- a/en/c/cut.6843.wikitext
+++ b/en/c/cut.6843.wikitext
@@ -26,6 +26,7 @@
 *Finnish: [[leikata|leikattu]]
 *French: [[coupé]], [[coupée]]
 {{trans-mid}}
+*Hebrew: [[חתוך]] (khatukh) {{m}}, [[חתוכה]] (khatukha) {{f}}
 *Swedish: [[klippt]], [[skuren]]
 {{trans-bottom}}
 
