--- a/en/c/cut.6843.wikitext
+++ b/en/c/cut.6843.wikitext
@@ -77,6 +77,7 @@ Only colloquial expressions here! For normal language terms, see [[circumcised]]
 {{trans-top|opening resulting from cutting}}
 *Danish: [[snitsår]] {{n}}, [[skramme]] {{c}}
 *Finnish: [[haava]], [[viilto]], [[viiltohaava]]
+*Hebrew: [[חתך]] (khetekh) {{m}}
 {{trans-mid}}
 *Kurdish: {{KUchar|[[برین]]}}
 *Swedish: [[skärsår]] {{n}}
@@ -85,6 +86,8 @@ Only colloquial expressions here! For normal language terms, see [[circumcised]]
 {{trans-top|act of cutting}}
 *Danish: [[hug]] {{n}}
 *Finnish: [[leikkaus]], [[viilto]], [[sivallus]]
+{{trans-mid}}
+*Hebrew: [[חיתוך]] (khitukh) {{m}}
 *Swedish: [[snitt]] {{n}}
 {{trans-bottom}}
 
@@ -121,6 +124,8 @@ Only colloquial expressions here! For normal language terms, see [[circumcised]]
 {{trans-top|slab of meat}}
 *Danish: [[udskæring]] {{c}}, [[stykke]] {{n}}
 *Finnish: [[pala]]
+{{trans-mid}}
+*Hebrew: [[חתיכה]] (khatikha) {{f}}
 {{trans-bottom}}
 
 {{trans-top|in fencing, an attack made with a chopping motion of the blade}}
