--- a/en/s/straight.7217.wikitext
+++ b/en/s/straight.7217.wikitext
@@ -1,5 +1,7 @@
 {{wikipedia|dab=straight}}
 ==English==
+===Spellings===
+*[[streight]] (''obsolete'')
 
 ===Etymology===
 {{ME.}} ''[[streght]]'' (Anglo Saxon ''streht''), the past participle of Middle English ''strechen'' (Anglo-Saxon ''streccan''), to stretch.
