--- a/en/p/pull.8438.wikitext
+++ b/en/p/pull.8438.wikitext
@@ -67,6 +67,7 @@
 {{trans-top|apply force to (something) so it comes towards one}}
 *Arabic: {{Arab|[[جر]]}} {{IPAchar|(járra)}}
 *Chinese: [[拖拉]] (tuōlā)
+*Czech: [[táhnout]]
 *Dutch: [[trekken]]
 *Esperanto: [[tiri]]
 *Finnish: [[vetää]]
