--- a/en/p/push.8439.wikitext
+++ b/en/p/push.8439.wikitext
@@ -56,6 +56,7 @@
 {{trans-top|transitive: apply a force to (an object) so that it moves away}}
 *Arabic: {{Arab|[[دفع]]}} {{IPAchar|(dáfaʕa)}}
 *Chinese: [[推]] (tuī)
+*Czech: [[tlačit]]
 *Dutch: [[duwen]]
 *Finnish: [[työntää]]
 *French: [[pousser]]
