/* Translations to be checked */ <choose#3292690>

--- a/en/c/choose.6832.wikitext
+++ b/en/c/choose.6832.wikitext
@@ -82,6 +82,7 @@ From Old English [[ceosan|ċēosan]].
 *{{ttbc|Albanian}}: [[zgjedh]]
 *{{ttbc|Chinese}}: [[選擇]]
 *{{ttbc|Croatian}}: [[izabrati]], [[izabirati]]
+*{{ttbc|Español}}: [[elegir]], [[escoger]]
 *{{ttbc|Esperanto}}: [[elekti]]
 *{{ttbc|Hungarian}}: [[választ]]
 *{{ttbc|Ilocano}}: [[pili]]
