/* Translations to be checked */ <coat#3293598>

--- a/en/c/coat.7393.wikitext
+++ b/en/c/coat.7393.wikitext
@@ -61,6 +61,7 @@
 
 =====Translations to be checked=====
 {{checktrans-top}}
+*{{ttbc|Danish}}: [[frakke]] {{c}}
 *{{ttbc|Irish}}: [[cóta]] {{m}}
 *{{ttbc|Romanian}}: [[haină]] {{f}}, [[manta]] {{f}}
 {{trans-bottom}}
