--- a/en/s/secretary.7224.wikitext
+++ b/en/s/secretary.7224.wikitext
@@ -14,6 +14,8 @@ From {{ML.}} ''[[secretarius]]'', one entrusted with [[secret]]s.
 
 # A person who keeps [[records]], takes [[notes]] and handles general [[clerical]] work.
 # The [[head]] of a [[department]] of [[government]].
+# A managerial or leading position in certain non-profit organizations, such as political parties, trade unions, international organizations.
+#:''Kofi Annan is the current secretary general of the United Nations.''
 # A type of [[desk]].
 # A species of [[bird]]; ''Sagittarius serpentarius''.
 
@@ -57,6 +59,11 @@ From {{ML.}} ''[[secretarius]]'', one entrusted with [[secret]]s.
 * [[Tok Pisin]]: [[sekreteri]]
 {{trans-bottom}}
 
+{{trans-top|leading or managerial position in certain organizations}}
+* Finnish: {{t|fi|sihteeri}}
+{{trans-mid}}
+{{trans-bottom}}
+
 {{trans-top|a type of desk}}
 * Finnish: {{t|fi|kirjoituspöytä}}
 * French: {{t+|fr|secrétaire}}
@@ -70,8 +77,8 @@ From {{ML.}} ''[[secretarius]]'', one entrusted with [[secret]]s.
 {{trans-top|Sagittarius serpentarius}}
 * Finnish: {{t|fi|sihteeri}}
 * French: {{t|fr|messager serpentaire}}
-{{trans-mid}}
 * German: {{t+|de|Sekretär}}
+{{trans-mid}}
 * Spanish: {{t|es|serpentario|m}}
 {{trans-bottom}}
 
