--- a/en/p/play.8442.wikitext
+++ b/en/p/play.8442.wikitext
@@ -280,6 +280,7 @@ Old English ''[[pleġian]]''
 * {{ttbc|Ido}}: [[ludar]] (1), [[plear]] (2, 4)
 * {{ttbc|Interlingua}}: [[jocar]]
 * {{ttbc|Irish}}: [[súgradh]] (''verbal noun'')
+* {{ttbc|Russian}}: [[играть]]
 * {{ttbc|Slovak}}: [[hrať sa]]
 * {{ttbc|Slovak}}: [[hrať]] (5), (6), (7)
 * {{ttbc|Tupinambá}}: [[nhemosaraîa]]
