--- a/en/明/明.16950.wikitext
+++ b/en/明/明.16950.wikitext
@@ -109,7 +109,7 @@ From [[日]] ‘sun’ + [[月]] ‘moon’.
 ==Vietnamese==
 
 ===Han character===
-{{vi-hantu|[[Minh]]}}
+{{vi-hantu|[[minh]]}}
 # {{defn|Vietnamese}}
 
 [[es:明]]
