+{{rfc-header|Spellings}} <straight#3305891>

--- a/en/s/straight.7217.wikitext
+++ b/en/s/straight.7217.wikitext
@@ -1,15 +1,17 @@
 {{wikipedia|dab=straight}}
 ==English==
+
 ===Spellings===
-*[[streight]] (''obsolete'')
+{{rfc-header|Spellings}}
+* [[streight]] (''obsolete'')
 
 ===Etymology===
 {{ME.}} ''[[streght]]'' (Anglo Saxon ''streht''), the past participle of Middle English ''strechen'' (Anglo-Saxon ''streccan''), to stretch.
 
 ===Pronunciation===
-*{{SAMPA|/streIt/}}
-*{{audio|en-us-straight.ogg|Audio (US)}}
-*Rhymes: [[Rhymes:English:-eɪt|-eɪt]]
+* {{SAMPA|/streIt/}}
+* {{audio|en-us-straight.ogg|Audio (US)}}
+* Rhymes: [[Rhymes:English:-eɪt|-eɪt]]
 
 ====Homophones====
 * [[strait]]
@@ -119,15 +121,15 @@
 =====Translations to be checked=====
 {{checktrans}}
 {{top}}
-*{{ttbc|Arabic}}: {{ARchar|[[مستقيم]]}} {{unicode|(mustaqí:m)}}
-*{{ttbc|Chinese}}: [[直]]的 (zhí de), [[笔直的]] (bǐzhí de)
-*{{ttbc|Italian}}: [[diritto]], [[liscio]], [[subito]]
-*{{ttbc|Japanese}}: [[真直ぐな]] (まっすぐな, massuguna)
+* {{ttbc|Arabic}}: {{ARchar|[[مستقيم]]}} {{unicode|(mustaqí:m)}}
+* {{ttbc|Chinese}}: [[直]]的 (zhí de), [[笔直的]] (bǐzhí de)
+* {{ttbc|Italian}}: [[diritto]], [[liscio]], [[subito]]
+* {{ttbc|Japanese}}: [[真直ぐな]] (まっすぐな, massuguna)
 {{mid}}
-*{{ttbc|Korean}}: [[똑바른]] (ggokbareun)
-*{{ttbc|Spanish}}: [[derecho]]
-*{{ttbc|Telugu}}: [[తిన్నని]] (tinnani), [[సరళమైన]] (saraLamaina), [[సూటి]] (sooTi)
-*{{ttbc|Welsh}}: [[uniawn]]
+* {{ttbc|Korean}}: [[똑바른]] (ggokbareun)
+* {{ttbc|Spanish}}: [[derecho]]
+* {{ttbc|Telugu}}: [[తిన్నని]] (tinnani), [[సరళమైన]] (saraLamaina), [[సూటి]] (sooTi)
+* {{ttbc|Welsh}}: [[uniawn]]
 {{bottom}}
 
 ===Adverb===
@@ -136,7 +138,7 @@
 # In a forward direction.
 #: '''''straight''' ahead''
 # Continuously; without [[interruption]] or [[pause]].
-#:''He claims he can hold his breath for three minutes '''straight'''.''
+#: ''He claims he can hold his breath for three minutes '''straight'''.''
 
 ====Translations====
 {{trans-top|in a forward direction}}
@@ -178,7 +180,7 @@
 =====Translations to be checked=====
 {{checktrans}}
 {{top}}
-*{{ttbc|Dutch}}: [[straat]]
+* {{ttbc|Dutch}}: [[straat]]
 {{mid}}
 {{bottom}}
 
