--- a/en/f/France.2105.wikitext
+++ b/en/f/France.2105.wikitext
@@ -170,6 +170,7 @@ From the [[Francs]], a people.
 [[pt:France]]
 [[ro:France]]
 [[ru:France]]
+[[simple:France]]
 [[sl:France]]
 [[fi:France]]
 [[sv:France]]
