/* Verb */ archaic form <speak#3320049>

--- a/en/s/speak.7214.wikitext
+++ b/en/s/speak.7214.wikitext
@@ -12,7 +12,7 @@
 {{OE.}} ''[[specan|spēcan]]'', from earlier ''[[sprecan|sprēcan]]''
 
 ===Verb===
-{{en-verb|speaks|speaking|'''[[spoke]]''' ''or archaic'', '''[[spake]]'''|spoken}}
+{{en-verb|'''[[speaks]]''' ''or archaic'', '''[[speaketh]]'''|speaking|'''[[spoke]]''' ''or archaic'', '''[[spake]]'''|spoken}}
 
 # {{intransitive}} To [[communicate]] with one's [[voice]], to [[say]] [[word]]s [[out loud]].
 #: ''I was so surprised I couldn't '''speak'''.''
