--- a/en/b/blond.6878.wikitext
+++ b/en/b/blond.6878.wikitext
@@ -2,7 +2,7 @@
 [[Image:Blond little girl.jpg|thumb|A blonde girl.]]
 
 ===Alternative spellings===
-* [[blonde]]
+* [[blonde]] (US)
 
 ===Etymology===
 : from Middle French "''blond''" (masculine); "''blonde''" (feminine) which likely derived from Germanic (cf. Old English "''blonden''feax" - ''grey''-haired).
@@ -40,9 +40,6 @@
 
 # Of a bleached, or pale golden colour.
 # Of a blond complexion (referring to a person)
-
-===Alternative spellings===
-:[[blonde]] (US)
 
 ====Translations====
 {{trans-top|colour}}
