iwiki +fa, simple <felt#3327379>

--- a/en/f/felt.6877.wikitext
+++ b/en/f/felt.6877.wikitext
@@ -109,6 +109,7 @@ See ''[[feel]]''.
 
 [[ar:felt]]
 [[el:felt]]
+[[fa:felt]]
 [[fr:felt]]
 [[io:felt]]
 [[it:felt]]
@@ -117,6 +118,7 @@ See ''[[feel]]''.
 [[pl:felt]]
 [[pt:felt]]
 [[ru:felt]]
+[[simple:felt]]
 [[fi:felt]]
 [[te:felt]]
 [[vi:felt]]
