/* Translations */  Added Basque translation <come#3332162>

--- a/en/c/come.6838.wikitext
+++ b/en/c/come.6838.wikitext
@@ -67,6 +67,7 @@ This spelling (for this meaning) is extremely rare, in comparison to the homopho
 ====Translations====
 {{trans-top|To move from further away to nearer to}}
 *Arabic: {{Arab|[[جاء]]}} (jā’a)
+*Basque: [[etorri]]
 *Bavarian: [[kemma]]
 *Chinese: [[來]], [[来]] (lái)
 *[[Crimean Tatar]]: [[kelmek]]
