* before Han ref template <側#3352452>

--- a/en/側/側.11140.wikitext
+++ b/en/側/側.11140.wikitext
@@ -1,29 +1,41 @@
 {{see|侧}}
-
 ==Translingual==
+
 ===Han character===
 {{Han char|rn=9|rad=人|as=09|sn=11|four=2220<sub>0</sub>|canj=人月金弓 (OBCN)}}
+
 # [[side]]
 # [[incline]], [[slant]], [[lean]]
+
 ====References====
-{{Han ref|kx=0111.340|dkj=00897|dj=0238.060|hdz=10189.120|uh=5074|ud=20596|bh=B0BC|bd=45244}}
+* {{Han ref|kx=0111.340|dkj=00897|dj=0238.060|hdz=10189.120|uh=5074|ud=20596|bh=B0BC|bd=45244}}
+
 ----
+
 ==Cantonese==
+
 ===Hanzi===
 {{yue-hanzi|jyut=|y=jak1}}
+
 # {{defn|Cantonese}}
+
 ----
+
 ==Japanese==
+
 ===Noun===
 {{ja-noun|k|count=|hira=がわ|kata=|rom=gawa|kanji=|kyu=|shin=|hidx=}}
+
 # [[side]]
 {{ja-noun|k|count=|hira=そば|kata=|rom=soba|kanji=|kyu=|shin=|hidx=}}
 # [[vicinity]], [[near]], [[beside]]
 
 ===Kanji===
 {{ja-kanji|grade=4|rs=人09}}
+
 ====Readings====
 {{ja-readings|on=[[そく]] ([[soku]]), [[しょく]] ([[shoku]])|kun=[[かわ]] ([[kawa]]), [[かたわら]] ([[側ら]], [[katawara]]), [[そばめる]] ([[側める]], [[sobameru]])}}
+
 ====Compounds====
 * [[側圧]]
 * [[側泳]]
@@ -52,15 +64,23 @@
 * [[側か]]
 * [[側む]]
 * [[側仕え]]
+
 ----
+
 ==Korean==
+
 ===Hanja===
 {{ko-hanja|hangeul=측|rv=cheuk|mr=ch'ŭk}}
+
 # {{defn|Korean}}
+
 ----
+
 ==Mandarin==
+
 ===Hanzi===
 {{cmn-hanzi|sim=侧|pin=[[cè]] ([[ce4]])|wg=ts'e<sup>4</sup>}}
+
 # {{defn|Mandarin}}
 
 [[fr:側]]
