* before Han ref <倽#3359804>

--- a/en/倽/倽.11083.wikitext
+++ b/en/倽/倽.11083.wikitext
@@ -1,19 +1,23 @@
 ==Translingual==
+
 ===Han character===
 {{Han char|rn=9|rad=人|as=08|sn=10|four=|canj=人人一口 (OOMR), X人人一口 (XOOMR)}}
+
 # [[what]]
 # [[which]]
 # [[who]]
 # [[why]]
+
 ====References====
-{{Han ref|kx=0109.171|hdz=10180.050|uh=503D|ud=20541}}
+* {{Han ref|kx=0109.171|hdz=10180.050|uh=503D|ud=20541}}
+
 ----
+
 ==Mandarin==
+
 ===Hanzi===
 {{cmn-hanzi|pin=[[jià]] ([[jia4]]), [[shà]] ([[sha4]]), [[xiá]] ([[xia2]])|wg=chia<sup>4</sup>, sha<sup>4</sup>, hsia<sup>2</sup>}}
+
 # {{defn|Mandarin}}
-
-
-
 
 [[fr:倽]]
