* before Han ref, * before ja-readings <明#3370267>

--- a/en/明/明.16950.wikitext
+++ b/en/明/明.16950.wikitext
@@ -5,11 +5,12 @@ From [[日]] ‘sun’ + [[月]] ‘moon’.
 
 ===Han character===
 {{Han char|rn=72|rad=日|as=04|sn=8|four=6702<sub>0</sub>|canj=日月 (AB)|ids=⿰[[日]][[月]]}}
+
 # [[bright]], [[light]], [[brilliant]]
 # [[clear]]
 
 ====References====
-{{Han ref|kx=0491.120|dkj=13805|dj=0852.180|hdz=21491.080|uh=660E|ud=26126|bh=A9FA|bd=43514}}
+* {{Han ref|kx=0491.120|dkj=13805|dj=0852.180|hdz=21491.080|uh=660E|ud=26126|bh=A9FA|bd=43514}}
 
 ----
 
@@ -17,41 +18,44 @@ From [[日]] ‘sun’ + [[月]] ‘moon’.
 
 ===Hanzi===
 {{yue-hanzi|jyut=ming4|y=ming4}}
+
 # {{defn|Cantonese}}
 
 ----
+
 ==Japanese==
 
 ===Kanji===
 {{ja-kanji|grade=2|rs=日04}}
+
 # {{defn|Japanese}}
 
 ====Readings====
-{{ja-readings|kanon=[[めい]] (mei)|goon=[[みょう]] (myō)|toon=[[みん]] (min)|kun=[[あかるい]] ([[明るい]], akarui), [[あきらか]] ([[明らか]], akiraka), [[あける]] ([[明ける]], akeru)}}
+* {{ja-readings|kanon=[[めい]] (mei)|goon=[[みょう]] (myō)|toon=[[みん]] (min)|kun=[[あかるい]] ([[明るい]], akarui), [[あきらか]] ([[明らか]], akiraka), [[あける]] ([[明ける]], akeru)}}
 
 ====Compounds====
-*[[明日]]
-*[[明星]]
-*[[明朝]]
-*[[明王]]
-*[[明快]]
-*[[明解]]
-*[[明海]]
-*[[明確]]
-*[[明晦]]
-*[[明鏡止水]]
-*[[明君]]
-*[[明言]]
-*[[明察]]
-*[[明示]]
-*[[明治]]
-*[[明時]]
-*[[明信]]
-*[[明晰]]
-*[[明哲]]
-*[[明徳]]
-*[[明白]]
-*[[明瞭]]
+* [[明日]]
+* [[明星]]
+* [[明朝]]
+* [[明王]]
+* [[明快]]
+* [[明解]]
+* [[明海]]
+* [[明確]]
+* [[明晦]]
+* [[明鏡止水]]
+* [[明君]]
+* [[明言]]
+* [[明察]]
+* [[明示]]
+* [[明治]]
+* [[明時]]
+* [[明信]]
+* [[明晰]]
+* [[明哲]]
+* [[明徳]]
+* [[明白]]
+* [[明瞭]]
 
 ----
 
@@ -59,52 +63,55 @@ From [[日]] ‘sun’ + [[月]] ‘moon’.
 
 ===Hanja===
 {{ko-hanja|hangeul=명|eumhun=|rv=myeong|mr=myŏng|y=myeng}}
+
 # {{defn|Korean}}
 
 ----
+
 ==Mandarin==
 
 ===Hanzi===
 {{cmn-hanzi|pin=[[míng]] ([[ming2]])|wg=ming<sup>2</sup>}}
+
 # {{defn|Mandarin}}
 
 ====Compounds====
-*[[明暗]]
-*[[明白]]
-*[[明白人]]
-*[[明灿灿]]
-*[[明察]]
-*[[明察暗访]]
-*[[明察秋毫]]
-*[[明达]]
-*[[明灯]]
-*[[明断]]
-*[[明矾]]
-*[[明光]]
-*[[明光光]]，[[明光光的]]
-*[[明光瓦亮]]
-*[[明火]]
-*[[明洁]]
-*[[明净]]
-*[[明静]]
-*[[明镜]]
-*[[明朗]]
-*[[明亮]]
-*[[明明]]
-*[[明年]]
-*[[明枪暗箭]]
-*[[明抢]]
-*[[明确]]
-*[[明儿]]
-*[[明日]]
-*[[明锐]]
-*[[明闪闪]]，[[明闪闪的]]
-*[[明升暗降]]
-*[[明显]]
-*[[明星]]
+* [[明暗]]
+* [[明白]]
+* [[明白人]]
+* [[明灿灿]]
+* [[明察]]
+* [[明察暗访]]
+* [[明察秋毫]]
+* [[明达]]
+* [[明灯]]
+* [[明断]]
+* [[明矾]]
+* [[明光]]
+* [[明光光]]，[[明光光的]]
+* [[明光瓦亮]]
+* [[明火]]
+* [[明洁]]
+* [[明净]]
+* [[明静]]
+* [[明镜]]
+* [[明朗]]
+* [[明亮]]
+* [[明明]]
+* [[明年]]
+* [[明枪暗箭]]
+* [[明抢]]
+* [[明确]]
+* [[明儿]]
+* [[明日]]
+* [[明锐]]
+* [[明闪闪]]，[[明闪闪的]]
+* [[明升暗降]]
+* [[明显]]
+* [[明星]]
 
 ====Phrases====
-*[[明枪易躲，暗箭难防]]
+* [[明枪易躲，暗箭难防]]
 
 ----
 
@@ -112,6 +119,7 @@ From [[日]] ‘sun’ + [[月]] ‘moon’.
 
 ===Han character===
 {{vi-hantu|[[minh]]}}
+
 # {{defn|Vietnamese}}
 
 [[es:明]]
