--- a/en/c/come.6838.wikitext
+++ b/en/c/come.6838.wikitext
@@ -95,7 +95,7 @@ This spelling (for this meaning) is extremely rare, in comparison to the homopho
 * Mongolian: [[ирэх]] (irekh)
 * Old English: [[cuman]]
 * [[Pashto]]: {{PSchar|[[راتلل]]}}
-* Persian: {{FAchar|[[امدن|آمَدَن]]}} (āmædæn)
+* Persian: {{fa-Arab|[[آمدن]]}} (āmædæn)
 * Polish: [[przychodzić]]
 * Portuguese: [[vir]]
 * [[Rohingya]]: [[ai]]
@@ -108,7 +108,7 @@ This spelling (for this meaning) is extremely rare, in comparison to the homopho
 * Swedish: [[komma]]
 * Thai: {{Thai|[[มา]]}} (maa)
 * Turkish: [[gelmek]]
-* Urdu: {{URchar|[[انا|آنا]]}} (ānā)
+* Urdu: {{URchar|[[آنا]]}} (ānā)
 * Yiddish: [[קומען]] (komen)
 {{trans-bottom}}
 
