* before Han ref, * before ja-readings <坺#3376485>

--- a/en/坺/坺.13053.wikitext
+++ b/en/坺/坺.13053.wikitext
@@ -1,20 +1,32 @@
 ==Translingual==
+
 ===Han character===
 {{Han char|rn=32|rad=土|as=05|sn=8|four=|canj=土戈大水 (GIKE)}}
+
 # {{defn|Han}}
+
 ====References====
-{{Han ref|kx=0227.040|dkj=05000|dj=0462.210|hdz=10430.080|uh=577A|ud=22394}}
+* {{Han ref|kx=0227.040|dkj=05000|dj=0462.210|hdz=10430.080|uh=577A|ud=22394}}
+
 ----
+
 ==Japanese==
+
 ===Kanji===
 {{ja-kanji|grade=|rs=土05}}
-# {{defn|Japanese}} 
+
+# {{defn|Japanese}}
+
 ====Readings====
-{{ja-readings|on=[[はつ]] (hatsu), [[はち]] (hachi), [[ぼち]] (bochi)|kun=[[ちりのさま]] (chirinosama)}}
+* {{ja-readings|on=[[はつ]] (hatsu), [[はち]] (hachi), [[ぼち]] (bochi)|kun=[[ちりのさま]] (chirinosama)}}
+
 ----
+
 ==Mandarin==
+
 ===Hanzi===
 {{cmn-hanzi|pin=[[bá]] ([[ba2]])|wg=pa<sup>2</sup>}}
+
 # {{defn|Mandarin}}
 
 [[fr:坺]]
