--- a/en/s/saffron.4771.wikitext
+++ b/en/s/saffron.4771.wikitext
@@ -53,6 +53,7 @@
 *Bosnian: [[šafran#Bosnian|šafran]] {{m}}
 *Bulgarian: [[шафран]] {{m}}
 *Czech: [[šafrán]] {{m}}
+*Dutch: [[saffraan]]
 *Finnish: [[sahrami]]
 *French: [[safran]]
 *Italian: [[zafferano]] {{m}}
@@ -71,6 +72,7 @@
 {{trans-bottom}}
 
 {{trans-top|dye}}
+*Dutch: [[saffraan]]
 *Hindi: [[केसरी]] (kesarī), [[केसरिया]] (kesariyā)
 *Italian: [[zafferano]] {{m}}
 *Polish: [[szafran]] {{m}}
