* before Han ref, * before ja-readings <停#3387128>

--- a/en/停/停.11116.wikitext
+++ b/en/停/停.11116.wikitext
@@ -1,44 +1,62 @@
 {{see|仃}}
-
 ==Translingual==
+
 ===Han character===
 {{Han char|rn=9|rad=人|as=09|sn=11|four=2022<sub>1</sub>|canj=人卜口弓 (OYRN)|ids=⿰[[亻]][[亭]]}}
+
 # stop, suspend, delay
 # suitable
+
 ====References====
-{{Han ref|kx=0110.320|dkj=00864|dj=0236.160|hdz=10194.070|uh=505C|ud=20572|bh=B0B1|bd=45233}}
+* {{Han ref|kx=0110.320|dkj=00864|dj=0236.160|hdz=10194.070|uh=505C|ud=20572|bh=B0B1|bd=45233}}
+
 ----
 
 ==Cantonese==
+
 ===Hanzi===
 {{yue-hanzi|jyut=|y=ting4}}
+
 # {{defn|Cantonese}}
+
 ----
+
 ==Japanese==
+
 ===Kanji===
 {{ja-kanji|grade=4|rs=人09}}
+
 # {{defn|Japanese}}
+
 ====Readings====
-{{ja-readings|on=[[てい]] (tei), [[ちょう]] (chō), [[じょう]] (jō)|kun=[[とどまる]] (todomaru)}}
+* {{ja-readings|on=[[てい]] (tei), [[ちょう]] (chō), [[じょう]] (jō)|kun=[[とどまる]] (todomaru)}}
+
 ====Compounds====
 {{top4}}
-*[[各停]]
+* [[各停]]
 {{mid4}}
-*[[停車]]
+* [[停車]]
 {{mid4}}
-*[[バス停]] ([[バスてい]], [[basutei]]) [[bus stop]]
+* [[バス停]] ([[バスてい]], [[basutei]]) [[bus stop]]
 {{mid4}}
 {{bottom}}
+
 ----
 
 ==Korean==
+
 ===Hanja===
 {{ko-hanja|hangeul=정|rv=jeong|mr=chŏng}}
+
 # {{defn|Korean}}
+
 ----
+
 ==Mandarin==
+
 ===Hanzi===
 {{cmn-hanzi|pin=[[tíng]] ([[ting2]])|wg=t'ing<sup>2</sup>}}
+
 # {{defn|Mandarin}}
 
 [[fr:停]]
