* before Han ref, * before ja-readings <偬#3395622>

--- a/en/偬/偬.11132.wikitext
+++ b/en/偬/偬.11132.wikitext
@@ -1,27 +1,42 @@
 {{see|傯}}
-
 ==Translingual==
+
 ===Han character===
 {{Han char|rn=9|rad=人|as=09|sn=11|four=|canj=人心大心 (OPKP)}}
+
 # urgent
+
 ====References====
-{{Han ref|kx=0111.250|dkj=00889|dj=0237.220|hdz=10194.030|uh=506C|ud=20588}}
+* {{Han ref|kx=0111.250|dkj=00889|dj=0237.220|hdz=10194.030|uh=506C|ud=20588}}
+
 ----
+
 ==Japanese==
+
 ===Kanji===
 {{ja-kanji|grade=|rs=人09}}
+
 # {{defn|Japanese}}
+
 ====Readings====
-{{ja-readings|on=[[そう]] (sō)|kun=[[くるしむ]] (kurushimu), [[せわしい]] (sewashii), [[あわただしい]] (awatadashii)}}
+* {{ja-readings|on=[[そう]] (sō)|kun=[[くるしむ]] (kurushimu), [[せわしい]] (sewashii), [[あわただしい]] (awatadashii)}}
+
 ----
+
 ==Korean==
+
 ===Hanja===
 {{ko-hanja|hangeul=총|rv=chong|mr=ch'ong}}
+
 # {{defn|Korean}}
+
 ----
+
 ==Mandarin==
+
 ===Hanzi===
 {{cmn-hanzi|tra=傯|pin=[[zǒng]] ([[zong3]])|wg=tsung<sup>3</sup>}}
+
 # {{defn|Mandarin}}
 
 [[fr:偬]]
