trans link [[Scottish Gaelic]] <coat#3397477>

--- a/en/c/coat.7393.wikitext
+++ b/en/c/coat.7393.wikitext
@@ -2,8 +2,8 @@
 ==English==
 
 ===Pronunciation===
-*{{audio|en-us-coat.ogg|Audio (US)}}
-*:Rhymes: [[Rhymes:English:-əʊt|-əʊt]]
+* {{audio|en-us-coat.ogg|Audio (US)}}
+*: Rhymes: [[Rhymes:English:-əʊt|-əʊt]]
 
 ===Noun===
 {{en-noun|s|-}}
@@ -15,86 +15,86 @@
 
 ====Translations====
 {{trans-top|an outer garment covering the upper torso and arms}}
-*Dutch: [[mantel]] {{m}}, [[jas]] {{m}}
-*Finnish: [[takki]]
-*French: [[manteau]] {{m}}
-*German: [[Mantel]] {{m}}
-*Greek: [[πανωφόρι]] (panofori) {{n}}, [[παλτό]] (palto) {{n}}
-*Indonesian: [[mantel]]
-*Italian: [[mantello]] {{m}}
-*Japanese: [[コート]] (kōto), [[外套]] ([[がいとう]], gaitō)
+* Dutch: [[mantel]] {{m}}, [[jas]] {{m}}
+* Finnish: [[takki]]
+* French: [[manteau]] {{m}}
+* German: [[Mantel]] {{m}}
+* Greek: [[πανωφόρι]] (panofori) {{n}}, [[παλτό]] (palto) {{n}}
+* Indonesian: [[mantel]]
+* Italian: [[mantello]] {{m}}
+* Japanese: [[コート]] (kōto), [[外套]] ([[がいとう]], gaitō)
 {{trans-mid}}
-*Portuguese: [[casaco]] {{m}}
-*Russian: [[пальто]] (pal’tó) {{n}}, [[пиджак]] (pidžák) {{m}}
-*Scottish Gaelic: [[còta]] {{m}}
-*Slovene: [[plašč]] {{m}}
-*Spanish: [[abrigo]] {{m}}, [[saco]] {{m}}, [[casaca]] {{f}}
-*Swedish: [[rock#Swedish|rock]] {{c}}
+* Portuguese: [[casaco]] {{m}}
+* Russian: [[пальто]] (pal’tó) {{n}}, [[пиджак]] (pidžák) {{m}}
+* [[Scottish Gaelic]]: [[còta]] {{m}}
+* Slovene: [[plašč]] {{m}}
+* Spanish: [[abrigo]] {{m}}, [[saco]] {{m}}, [[casaca]] {{f}}
+* Swedish: [[rock#Swedish|rock]] {{c}}
 {{trans-bottom}}
 
 {{trans-top|a covering of material, such as paint}}
-*Dutch: [[laag]] {{f}}
-*Finnish: [[pinta]], [[pinnoite]]
-*French: [[couche]] {{f}}
-*German: [[Beschichtung]] {{f}}
-*Greek: [[επικάλυμμα]] (epikalima) {{n}}
+* Dutch: [[laag]] {{f}}
+* Finnish: [[pinta]], [[pinnoite]]
+* French: [[couche]] {{f}}
+* German: [[Beschichtung]] {{f}}
+* Greek: [[επικάλυμμα]] (epikalima) {{n}}
 {{trans-mid}}
-*Italian: [[rivestimento]] {{m}}
-*Japanese: [[塗装]] ([[とそう]], tosō), [[コーティング]] (kōtyingu)
-*Portuguese: [[cobertura]] {{f}}
-*Russian: [[слой]] (sloj) {{m}}
-*Spanish: [[cubierta]] {{f}}
-*Swedish: [[lager]], [[täcklager]], [[hölje]], [[täcke]]
+* Italian: [[rivestimento]] {{m}}
+* Japanese: [[塗装]] ([[とそう]], tosō), [[コーティング]] (kōtyingu)
+* Portuguese: [[cobertura]] {{f}}
+* Russian: [[слой]] (sloj) {{m}}
+* Spanish: [[cubierta]] {{f}}
+* Swedish: [[lager]], [[täcklager]], [[hölje]], [[täcke]]
 {{trans-bottom}}
 
 {{trans-top|fur or feathers}}
-*Finnish: [[turkki]] (fur), [[höyhenpuku]] (feathers)
+* Finnish: [[turkki]] (fur), [[höyhenpuku]] (feathers)
 {{trans-mid}}
-*Japanese: [[毛皮]]([[けがわ]], kegawa), [[羽毛]]([[うもう]], umō)
-*Swedish: [[hårbeklädnad]], [[päls]], [[fjäderdräkt]]
+* Japanese: [[毛皮]]([[けがわ]], kegawa), [[羽毛]]([[うもう]], umō)
+* Swedish: [[hårbeklädnad]], [[päls]], [[fjäderdräkt]]
 {{trans-bottom}}
 
 {{trans-top|canvas secured around mast}}
-*Finnish: [[takki]]
+* Finnish: [[takki]]
 {{trans-mid}}
 {{trans-bottom}}
 
 =====Translations to be checked=====
 {{checktrans-top}}
-*{{ttbc|Danish}}: [[frakke]] {{c}}
-*{{ttbc|Irish}}: [[cóta]] {{m}}
-*{{ttbc|Romanian}}: [[haină]] {{f}}, [[manta]] {{f}}
+* {{ttbc|Danish}}: [[frakke]] {{c}}
+* {{ttbc|Irish}}: [[cóta]] {{m}}
+* {{ttbc|Romanian}}: [[haină]] {{f}}, [[manta]] {{f}}
 {{trans-bottom}}
 
 ====Derived terms====
-*[[coat of arms]]
-*[[greatcoat]]
-*[[covert-coat]]
+* [[coat of arms]]
+* [[greatcoat]]
+* [[covert-coat]]
 
 ===Verb===
 {{en-verb}}
 
 # To cover with a coat of some material
-#:''One can buy '''coated''' frying pans, which are much easier to wash up than normal ones.''
+#: ''One can buy '''coated''' frying pans, which are much easier to wash up than normal ones.''
 # To cover as a coat.
 
 ====Translations====
 {{trans-top|to cover with a coat of some material}}
-*Dutch: [[coaten]]
-*Finnish: [[päällystää]]
-*French: [[couvrir]]
-*German: [[beschichten]]
-*Italian: [[rivestire]]
+* Dutch: [[coaten]]
+* Finnish: [[päällystää]]
+* French: [[couvrir]]
+* German: [[beschichten]]
+* Italian: [[rivestire]]
 {{trans-mid}}
-*Russian: [[покрывать]] (pokryvát’)
-*Spanish: [[cubrir]]
-*Swedish: [[täcka]], [[belägga]]
+* Russian: [[покрывать]] (pokryvát’)
+* Spanish: [[cubrir]]
+* Swedish: [[täcka]], [[belägga]]
 {{trans-bottom}}
 
 {{trans-top|to cover as a coat}}
-*Finnish: [[peittää]]
+* Finnish: [[peittää]]
 {{trans-mid}}
-*Swedish: [[täcka]]
+* Swedish: [[täcka]]
 {{trans-bottom}}
 
 [[Category:1000 English basic words]]
