* before Han ref, * before ja-readings <坰#3399373>

--- a/en/坰/坰.13043.wikitext
+++ b/en/坰/坰.13043.wikitext
@@ -1,30 +1,50 @@
 ==Translingual==
+
 ===Han character===
 {{Han char|rn=32|rad=土|as=05|sn=8|four=4712<sub>0</sub>|canj=土月口 (GBR)}}
+
 # [[wilds]]
+
 ====References====
-{{Han ref|kx=0226.290|dkj=04985|dj=0462.070|hdz=10432.030|uh=5770|ud=22384|bh=CBF7|bd=52215}}
+* {{Han ref|kx=0226.290|dkj=04985|dj=0462.070|hdz=10432.030|uh=5770|ud=22384|bh=CBF7|bd=52215}}
+
 ----
+
 ==Cantonese==
+
 ===Hanzi===
 {{yue-hanzi|jyut=|y=gwing1}}
+
 # {{defn|Cantonese}}
+
 ----
+
 ==Japanese==
+
 ===Kanji===
 {{ja-kanji|grade=|rs=土05}}
-# {{defn|Japanese}} 
+
+# {{defn|Japanese}}
+
 ====Readings====
-{{ja-readings|on=[[けい]] (kei), [[きょう]] (kyō)|kun=}}
+* {{ja-readings|on=[[けい]] (kei), [[きょう]] (kyō)|kun=}}
+
 ----
+
 ==Korean==
+
 ===Hanja===
 {{ko-hanja|hangeul=경|rv=gyeong|mr=kyŏng}}
+
 # {{defn|Korean}}
+
 ----
+
 ==Mandarin==
+
 ===Hanzi===
 {{cmn-hanzi|pin=[[jiōng]] ([[jiong1]])|wg=chiung<sup>1</sup>}}
+
 # {{defn|Mandarin}}
 
 [[fr:坰]]
