* before Han ref, * before ja-readings <坿#3401271>

--- a/en/坿/坿.13058.wikitext
+++ b/en/坿/坿.13058.wikitext
@@ -1,21 +1,33 @@
 ==Translingual==
+
 ===Han character===
 {{Han char|rn=32|rad=土|as=05|sn=8|four=|canj=土人木戈 (GODI)}}
+
 # [[mound]]
 # used in place names
+
 ====References====
-{{Han ref|kx=0227.130|dkj=05009|dj=0462.290|hdz=10432.100|uh=577F|ud=22399}}
+* {{Han ref|kx=0227.130|dkj=05009|dj=0462.290|hdz=10432.100|uh=577F|ud=22399}}
+
 ----
+
 ==Japanese==
+
 ===Kanji===
 {{ja-kanji|grade=|rs=土05}}
-# {{defn|Japanese}} 
+
+# {{defn|Japanese}}
+
 ====Readings====
-{{ja-readings|on=[[ふ]] (fu)|kun=[[つける]] (tsukeru), [[いかだ]] (ikada)}}
+* {{ja-readings|on=[[ふ]] (fu)|kun=[[つける]] (tsukeru), [[いかだ]] (ikada)}}
+
 ----
+
 ==Mandarin==
+
 ===Hanzi===
 {{cmn-hanzi|pin=[[fù]] ([[fu4]])|wg=fu<sup>4</sup>}}
+
 # {{defn|Mandarin}}
 
 [[fr:坿]]
