/* Translations */ pt checked <curtain#3406982>

--- a/en/c/curtain.7391.wikitext
+++ b/en/c/curtain.7391.wikitext
@@ -25,6 +25,7 @@
 *Japanese [[カーテン]] (kāten)
 {{trans-mid}}
 *Kurdish: {{KUchar|[[په‌رده‌]]}}
+*Portuguese: [[cortina]] {{f}}
 *Russian: [[штора]] (štóra) {{f}}, [[занавеска]] (zanav'éska) {{f}}
 *Slovene: [[zavesa]] {{f}}
 *Spanish: [[cortina]] {{f}}
@@ -36,6 +37,7 @@
 *German: [[Vorhang]] {{m}}
 *Japanese [[幕]] ([[まく]], maku), [[緞帳]] ([[どんちょう]], donchō) with vertical move, [[引き幕]]　([[ひきまく]] hikimaku) with horizontal move
 {{trans-mid}}
+*Portuguese: [[cortina]] {{f}}
 *Russian: [[занавес]] (zánav'es) {{m}}
 *Slovene: [[zavesa]] {{f}}
 *Spanish: [[cortina]] {{f}}
@@ -49,7 +51,6 @@
 *{{ttbc|Indonesian}}: [[serambi]], [[korden]], [[layar]]
 *{{ttbc|Italian}}: [[cortina]], tenda {{f}}
 *{{ttbc|Kurdish}}: [[perde]] {{f}}
-*{{ttbc|Portuguese}}: [[cortina]] {{f}}
 *{{ttbc|Slovak}}: [[opona]] {{f}}
 *{{ttbc|Spanish}}: [[cortina]] {{f}}
 *{{ttbc|Turkish}}: [[perde]]
