/* Translations */ +pt <curtain#3406984>

--- a/en/c/curtain.7391.wikitext
+++ b/en/c/curtain.7391.wikitext
@@ -64,6 +64,8 @@
 ====Translations====
 {{trans-top|to cover with a curtain}}
 *Finnish: [[verhota]]
+{{trans-mid}}
+*Portuguese: [[cobrir]] com cortina, [[acortinar]], [[encortinar]]
 {{trans-bottom}}
 
 ===See also===
