* before Han ref, * before ja-readings <偽#3412416>

--- a/en/偽/偽.11149.wikitext
+++ b/en/偽/偽.11149.wikitext
@@ -1,32 +1,51 @@
 {{see|伪}}
-
 ==Translingual==
+
 ===Han character===
 {{Han char|rn=9|rad=人|as=09|sn=11|four=2222<sub>7</sub>|canj=人戈大火 (OIKF)}}
+
 # false, counterfeit, bogus
+
 ====References====
-{{Han ref|kx=0112.071|dkj=00927|hdz=10195.040|uh=507D|ud=20605|bh=B0B0|bd=45232}}
+* {{Han ref|kx=0112.071|dkj=00927|hdz=10195.040|uh=507D|ud=20605|bh=B0B0|bd=45232}}
+
 ----
+
 ==Cantonese==
+
 ===Hanzi===
 {{yue-hanzi|jyut=|y=ngai6}}
+
 # {{defn|Cantonese}}
+
 ----
+
 ==Japanese==
+
 ===Kanji===
 {{ja-kanji|grade=c|rs=人09}}
+
 # {{defn|Japanese}}
+
 ====Readings====
-{{ja-readings|on=[[ぎ]] (gi), [[か]] (ka)|kun=[[いつわる]] (itsuwaru), [[にせ]] (nise), [[いつわり]] (itsuwari)}}
+* {{ja-readings|on=[[ぎ]] (gi), [[か]] (ka)|kun=[[いつわる]] (itsuwaru), [[にせ]] (nise), [[いつわり]] (itsuwari)}}
+
 ----
+
 ==Korean==
+
 ===Hanja===
 {{ko-hanja|hangeul=위|rv=wi|mr=wi}}
+
 # {{defn|Korean}}
+
 ----
+
 ==Mandarin==
+
 ===Hanzi===
 {{cmn-hanzi|sim=伪|pin=[[wěi]] ([[wei3]])|wg=wei<sup>3</sup>}}
+
 # {{defn|Mandarin}}
 
 [[fr:偽]]
