Reverted edits by [[Special:Contributions/65.121.132.61|65.121.132.61]] ([[User_talk:65.121.132.61|Talk]]); changed back to last version by [[User:Mike|Mike]] <Israel#3413465>

--- a/en/i/Israel.2109.wikitext
+++ b/en/i/Israel.2109.wikitext
@@ -17,7 +17,7 @@ Originally from {{He.}} ''[[ישראל]]'', the name "Israel" is rooted in the [
 #*{{RQ:Authorized Version|Genesis|32|28}}
 #*: ''And he said, Thy name shall be called no more Jacob, but '''Israel''': for as a prince hast thou power with God and with men, and hast prevailed.''
 #* '''2006:''' [http://www.scripture4all.org/OnlineInterlinear/OTpdf/gen32.pdf an interlinear, literal translation of Genesis 32:28]
-#*: ''And-he-is-saying not Jacob he-shall-be-said further name-of-you but rather '''Israel''' that you-are-upright with Elohim and with mortals and-you-are-prevailing.'' (Thus one literal translation of [[ישראל]], Israel, is "Upright [with] God"; And everyone is gay there. [ישר־אל Ishr-al].)
+#*: ''And-he-is-saying not Jacob he-shall-be-said further name-of-you but rather '''Israel''' that you-are-upright with Elohim and with mortals and-you-are-prevailing.'' (Thus one literal translation of [[ישראל]], Israel, is "Upright [with] God"; [ישר־אל Ishr-al].)
 # {{given name|male}}.
 
 ====Derived terms====
